code/java/StocksAPIforDigitalPortals/v2/README.md
<img alt="FactSet" src="https://www.factset.com/hubfs/Assets/images/factset-logo.svg" height="56" width="290">

# Stocks API for Digital Portals client library for Java

[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/stocksapifordigitalportals)](https://search.maven.org/artifact/com.factset.sdk/stocksapifordigitalportals)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 0.9.1
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>0.10.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>stocksapifordigitalportals</artifactId>
  <version>0.9.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:0.10.0"
    implementation "com.factset.sdk:stocksapifordigitalportals:0.9.1"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

```java

import com.factset.sdk.StocksAPIforDigitalPortals.*;
import com.factset.sdk.StocksAPIforDigitalPortals.auth.*;
import com.factset.sdk.StocksAPIforDigitalPortals.models.*;
import com.factset.sdk.StocksAPIforDigitalPortals.api.StockApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class StockApiExample {

    public static void main(String[] args) {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient();
        // HttpBasicAuth FactSetApiKey = (HttpBasicAuth) defaultClient.getAuthentication("FactSetApiKey");
        // FactSetApiKey.setUsername("YOUR USERNAME");
        // FactSetApiKey.setPassword("YOUR PASSWORD");

        StockApi apiInstance = new StockApi(defaultClient);
        java.util.Set<String> attributes = Arrays.asList(); // java.util.Set<String> | Limit the attributes returned in the response to the specified set.
        String language = "language_example"; // String | ISO 639-1 code of the language.
        try {
            InlineResponse2001 result = apiInstance.getStockDividendTypeList(attributes, language);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling StockApi#getStockDividendTypeList");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.StocksAPIforDigitalPortals.*;
import com.factset.sdk.StocksAPIforDigitalPortals.api.StockApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

StockApi apiInstance = new StockApi(defaultClient);

```


## Documentation for API Endpoints

All URIs are relative to *http://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*StockApi* | [**getStockDividendTypeList**](docs/StockApi.md#getStockDividendTypeList) | **GET** /stock/dividend/type/list | List of dividend types.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkMonth1Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkMonth1Get) | **GET** /stock/notation/keyFigures/benchmark/month/1/get | End-of-day (EOD) benchmark key figures of a stock for the time range of one month.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkMonth3Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkMonth3Get) | **GET** /stock/notation/keyFigures/benchmark/month/3/get | End-of-day (EOD) benchmark key figures of a stock for the time range of three months.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkWeek1Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkWeek1Get) | **GET** /stock/notation/keyFigures/benchmark/week/1/get | End-of-day (EOD) benchmark key figures of a stock for the time range of one week.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkYear1Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkYear1Get) | **GET** /stock/notation/keyFigures/benchmark/year/1/get | End-of-day (EOD) benchmark key figures of a stock for the time range of one year.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkYear3Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkYear3Get) | **GET** /stock/notation/keyFigures/benchmark/year/3/get | End-of-day (EOD) benchmark key figures of a stock for the time range of three years.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkYear5Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkYear5Get) | **GET** /stock/notation/keyFigures/benchmark/year/5/get | End-of-day (EOD) benchmark key figures of a stock for the time range of five years.
*StockApi* | [**postStockDividendList**](docs/StockApi.md#postStockDividendList) | **POST** /stock/dividend/list | List of dividends for a stock.
*StockApi* | [**postStockNotationRankingIntradayList**](docs/StockApi.md#postStockNotationRankingIntradayList) | **POST** /stock/notation/ranking/intraday/list | Ranking of stocks&#39; notations using intraday figures.
*StockApi* | [**postStockNotationScreenerSearch**](docs/StockApi.md#postStockNotationScreenerSearch) | **POST** /stock/notation/screener/search | Screener for stocks&#39; notations based on stock-specific parameters.
*StockApi* | [**postStockNotationScreenerValueRangesGet**](docs/StockApi.md#postStockNotationScreenerValueRangesGet) | **POST** /stock/notation/screener/valueRanges/get | Possible values and value ranges for the parameters used in the endpoint &#x60;/stock/notation/screener/search&#x60;.


## Documentation for Models

 - [CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [ErrorMetaObject](docs/ErrorMetaObject.md)
 - [InlineObject](docs/InlineObject.md)
 - [InlineObject1](docs/InlineObject1.md)
 - [InlineObject2](docs/InlineObject2.md)
 - [InlineObject3](docs/InlineObject3.md)
 - [InlineResponse200](docs/InlineResponse200.md)
 - [InlineResponse2001](docs/InlineResponse2001.md)
 - [InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [InlineResponse2002](docs/InlineResponse2002.md)
 - [InlineResponse2002Data](docs/InlineResponse2002Data.md)
 - [InlineResponse2002Notation](docs/InlineResponse2002Notation.md)
 - [InlineResponse2002NotationInstrument](docs/InlineResponse2002NotationInstrument.md)
 - [InlineResponse2002Status](docs/InlineResponse2002Status.md)
 - [InlineResponse2003](docs/InlineResponse2003.md)
 - [InlineResponse2003Accumulated](docs/InlineResponse2003Accumulated.md)
 - [InlineResponse2003Currency](docs/InlineResponse2003Currency.md)
 - [InlineResponse2003Data](docs/InlineResponse2003Data.md)
 - [InlineResponse2003Fsym](docs/InlineResponse2003Fsym.md)
 - [InlineResponse2003FsymListing](docs/InlineResponse2003FsymListing.md)
 - [InlineResponse2003FsymRegional](docs/InlineResponse2003FsymRegional.md)
 - [InlineResponse2003Instrument](docs/InlineResponse2003Instrument.md)
 - [InlineResponse2003InstrumentCompany](docs/InlineResponse2003InstrumentCompany.md)
 - [InlineResponse2003InstrumentCompanyCountry](docs/InlineResponse2003InstrumentCompanyCountry.md)
 - [InlineResponse2003InstrumentFsym](docs/InlineResponse2003InstrumentFsym.md)
 - [InlineResponse2003InstrumentFsymSecurity](docs/InlineResponse2003InstrumentFsymSecurity.md)
 - [InlineResponse2003InstrumentIndustryClassification](docs/InlineResponse2003InstrumentIndustryClassification.md)
 - [InlineResponse2003InstrumentIndustryClassificationRbics](docs/InlineResponse2003InstrumentIndustryClassificationRbics.md)
 - [InlineResponse2003InstrumentNsin](docs/InlineResponse2003InstrumentNsin.md)
 - [InlineResponse2003Market](docs/InlineResponse2003Market.md)
 - [InlineResponse2003Meta](docs/InlineResponse2003Meta.md)
 - [InlineResponse2003Trade](docs/InlineResponse2003Trade.md)
 - [InlineResponse2003TradePerformance](docs/InlineResponse2003TradePerformance.md)
 - [InlineResponse2004](docs/InlineResponse2004.md)
 - [InlineResponse2004Compliance](docs/InlineResponse2004Compliance.md)
 - [InlineResponse2004ComplianceFrance](docs/InlineResponse2004ComplianceFrance.md)
 - [InlineResponse2004Data](docs/InlineResponse2004Data.md)
 - [InlineResponse2004Estimates](docs/InlineResponse2004Estimates.md)
 - [InlineResponse2004EstimatesFirstFiscalYear](docs/InlineResponse2004EstimatesFirstFiscalYear.md)
 - [InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimates](docs/InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimates.md)
 - [InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesCurrency](docs/InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesCurrency.md)
 - [InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesEbit](docs/InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesEbit.md)
 - [InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesEbitda](docs/InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesEbitda.md)
 - [InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShare](docs/InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShare.md)
 - [InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareCashFlow](docs/InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareCashFlow.md)
 - [InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareDividends](docs/InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareDividends.md)
 - [InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareEarnings](docs/InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareEarnings.md)
 - [InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareSales](docs/InlineResponse2004EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareSales.md)
 - [InlineResponse2004EstimatesFirstFiscalYearFiscalYear](docs/InlineResponse2004EstimatesFirstFiscalYearFiscalYear.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatios](docs/InlineResponse2004EstimatesFirstFiscalYearRatios.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosDividendYield](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosDividendYield.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosEnterpriseValueEbit](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosEnterpriseValueEbit.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosEnterpriseValueEbitda](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosEnterpriseValueEbitda.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosEnterpriseValueSales](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosEnterpriseValueSales.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosPriceBookValue](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosPriceBookValue.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosPriceCashFlow](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosPriceCashFlow.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosPriceEarnings](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosPriceEarnings.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosPriceEarningsGrowth](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosPriceEarningsGrowth.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosPriceFreeCashFlow](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosPriceFreeCashFlow.md)
 - [InlineResponse2004EstimatesFirstFiscalYearRatiosPriceSales](docs/InlineResponse2004EstimatesFirstFiscalYearRatiosPriceSales.md)
 - [InlineResponse2004EstimatesFirstFiscalYearReturnOnAssets](docs/InlineResponse2004EstimatesFirstFiscalYearReturnOnAssets.md)
 - [InlineResponse2004EstimatesFirstFiscalYearReturnOnEquity](docs/InlineResponse2004EstimatesFirstFiscalYearReturnOnEquity.md)
 - [InlineResponse2004EstimatesSecondFiscalYear](docs/InlineResponse2004EstimatesSecondFiscalYear.md)
 - [InlineResponse2004EstimatesThirdFiscalYear](docs/InlineResponse2004EstimatesThirdFiscalYear.md)
 - [InlineResponse2004Instrument](docs/InlineResponse2004Instrument.md)
 - [InlineResponse2004InstrumentCompany](docs/InlineResponse2004InstrumentCompany.md)
 - [InlineResponse2004InstrumentCompanyCountry](docs/InlineResponse2004InstrumentCompanyCountry.md)
 - [InlineResponse2004InstrumentIndustryClassification](docs/InlineResponse2004InstrumentIndustryClassification.md)
 - [InlineResponse2004InstrumentIndustryClassificationRbics](docs/InlineResponse2004InstrumentIndustryClassificationRbics.md)
 - [InlineResponse2004InstrumentIndustryClassificationRbicsLevel1](docs/InlineResponse2004InstrumentIndustryClassificationRbicsLevel1.md)
 - [InlineResponse2004InstrumentIndustryClassificationRbicsLevel2](docs/InlineResponse2004InstrumentIndustryClassificationRbicsLevel2.md)
 - [InlineResponse2004InstrumentIndustryClassificationRbicsLevel3](docs/InlineResponse2004InstrumentIndustryClassificationRbicsLevel3.md)
 - [InlineResponse2004InstrumentIndustryClassificationRbicsLevel4](docs/InlineResponse2004InstrumentIndustryClassificationRbicsLevel4.md)
 - [InlineResponse2004InstrumentIndustryClassificationRbicsLevel5](docs/InlineResponse2004InstrumentIndustryClassificationRbicsLevel5.md)
 - [InlineResponse2004InstrumentIndustryClassificationRbicsLevel6](docs/InlineResponse2004InstrumentIndustryClassificationRbicsLevel6.md)
 - [InlineResponse2004InstrumentNsin](docs/InlineResponse2004InstrumentNsin.md)
 - [InlineResponse2004Market](docs/InlineResponse2004Market.md)
 - [InlineResponse2004Nsin](docs/InlineResponse2004Nsin.md)
 - [InlineResponse2004Performance](docs/InlineResponse2004Performance.md)
 - [InlineResponse2004PerformanceEndOfDay](docs/InlineResponse2004PerformanceEndOfDay.md)
 - [InlineResponse2004Recommendation](docs/InlineResponse2004Recommendation.md)
 - [InlineResponse2004RecommendationCounts](docs/InlineResponse2004RecommendationCounts.md)
 - [InlineResponse2004ReportedKeyFigures](docs/InlineResponse2004ReportedKeyFigures.md)
 - [InlineResponse2004ReportedKeyFiguresFirstFiscalYear](docs/InlineResponse2004ReportedKeyFiguresFirstFiscalYear.md)
 - [InlineResponse2004ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFigures](docs/InlineResponse2004ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFigures.md)
 - [InlineResponse2004ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresCurrency](docs/InlineResponse2004ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresCurrency.md)
 - [InlineResponse2004ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShare](docs/InlineResponse2004ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShare.md)
 - [InlineResponse2004ReportedKeyFiguresFirstFiscalYearFiscalYear](docs/InlineResponse2004ReportedKeyFiguresFirstFiscalYearFiscalYear.md)
 - [InlineResponse2004ReportedKeyFiguresFirstFiscalYearRatios](docs/InlineResponse2004ReportedKeyFiguresFirstFiscalYearRatios.md)
 - [InlineResponse2004ReportedKeyFiguresSecondFiscalYear](docs/InlineResponse2004ReportedKeyFiguresSecondFiscalYear.md)
 - [InlineResponse2004ReportedKeyFiguresThirdFiscalYear](docs/InlineResponse2004ReportedKeyFiguresThirdFiscalYear.md)
 - [InlineResponse2004RsiWilder](docs/InlineResponse2004RsiWilder.md)
 - [InlineResponse2004SimpleMovingAverage](docs/InlineResponse2004SimpleMovingAverage.md)
 - [InlineResponse2004SimpleMovingAverageTradingDaysSinceCrossover](docs/InlineResponse2004SimpleMovingAverageTradingDaysSinceCrossover.md)
 - [InlineResponse2004SimpleMovingAverageTradingDaysSinceCrossoverSma20vs50](docs/InlineResponse2004SimpleMovingAverageTradingDaysSinceCrossoverSma20vs50.md)
 - [InlineResponse2004SimpleMovingAverageTradingDaysSinceCrossoverSma50vs200](docs/InlineResponse2004SimpleMovingAverageTradingDaysSinceCrossoverSma50vs200.md)
 - [InlineResponse2004TradingValue](docs/InlineResponse2004TradingValue.md)
 - [InlineResponse2004TradingValueAverage](docs/InlineResponse2004TradingValueAverage.md)
 - [InlineResponse2004ValueUnit](docs/InlineResponse2004ValueUnit.md)
 - [InlineResponse2004Volatility](docs/InlineResponse2004Volatility.md)
 - [InlineResponse2005](docs/InlineResponse2005.md)
 - [InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [InlineResponse2005DataCategories](docs/InlineResponse2005DataCategories.md)
 - [InlineResponse2005DataCompany](docs/InlineResponse2005DataCompany.md)
 - [InlineResponse2005DataCompanyCountry](docs/InlineResponse2005DataCompanyCountry.md)
 - [InlineResponse2005DataCompliance](docs/InlineResponse2005DataCompliance.md)
 - [InlineResponse2005DataComplianceFrance](docs/InlineResponse2005DataComplianceFrance.md)
 - [InlineResponse2005DataEstimates](docs/InlineResponse2005DataEstimates.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYear](docs/InlineResponse2005DataEstimatesFirstFiscalYear.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimates](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimates.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesCurrency](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesCurrency.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbit](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbit.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbitMean](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbitMean.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbitda](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbitda.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShare](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShare.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareCashFlow](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareCashFlow.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareDividends](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareDividends.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareEarnings](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareEarnings.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareSales](docs/InlineResponse2005DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareSales.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearFiscalYear](docs/InlineResponse2005DataEstimatesFirstFiscalYearFiscalYear.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatios](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatios.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosDividendYield](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosDividendYield.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosDividendYieldMean](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosDividendYieldMean.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosEnterpriseValueEbit](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosEnterpriseValueEbit.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosEnterpriseValueEbitda](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosEnterpriseValueEbitda.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosEnterpriseValueSales](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosEnterpriseValueSales.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceBookValue](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceBookValue.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceCashFlow](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceCashFlow.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceEarnings](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceEarnings.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceEarningsGrowth](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceEarningsGrowth.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceFreeCashFlow](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceFreeCashFlow.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceSales](docs/InlineResponse2005DataEstimatesFirstFiscalYearRatiosPriceSales.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearReturnOnAssets](docs/InlineResponse2005DataEstimatesFirstFiscalYearReturnOnAssets.md)
 - [InlineResponse2005DataEstimatesFirstFiscalYearReturnOnEquity](docs/InlineResponse2005DataEstimatesFirstFiscalYearReturnOnEquity.md)
 - [InlineResponse2005DataEstimatesSecondFiscalYear](docs/InlineResponse2005DataEstimatesSecondFiscalYear.md)
 - [InlineResponse2005DataEstimatesThirdFiscalYear](docs/InlineResponse2005DataEstimatesThirdFiscalYear.md)
 - [InlineResponse2005DataIndustryClassification](docs/InlineResponse2005DataIndustryClassification.md)
 - [InlineResponse2005DataLevel](docs/InlineResponse2005DataLevel.md)
 - [InlineResponse2005DataMarket](docs/InlineResponse2005DataMarket.md)
 - [InlineResponse2005DataParent](docs/InlineResponse2005DataParent.md)
 - [InlineResponse2005DataPerformance](docs/InlineResponse2005DataPerformance.md)
 - [InlineResponse2005DataPerformanceEndOfDay](docs/InlineResponse2005DataPerformanceEndOfDay.md)
 - [InlineResponse2005DataPerformanceEndOfDayDay1](docs/InlineResponse2005DataPerformanceEndOfDayDay1.md)
 - [InlineResponse2005DataPerformanceEndOfDayMonth1](docs/InlineResponse2005DataPerformanceEndOfDayMonth1.md)
 - [InlineResponse2005DataPerformanceEndOfDayMonths3](docs/InlineResponse2005DataPerformanceEndOfDayMonths3.md)
 - [InlineResponse2005DataPerformanceEndOfDayMonths6](docs/InlineResponse2005DataPerformanceEndOfDayMonths6.md)
 - [InlineResponse2005DataPerformanceEndOfDayWeek1](docs/InlineResponse2005DataPerformanceEndOfDayWeek1.md)
 - [InlineResponse2005DataPerformanceEndOfDayYear1](docs/InlineResponse2005DataPerformanceEndOfDayYear1.md)
 - [InlineResponse2005DataPerformanceEndOfDayYearToDate](docs/InlineResponse2005DataPerformanceEndOfDayYearToDate.md)
 - [InlineResponse2005DataPerformanceEndOfDayYears3](docs/InlineResponse2005DataPerformanceEndOfDayYears3.md)
 - [InlineResponse2005DataPerformanceEndOfDayYears5](docs/InlineResponse2005DataPerformanceEndOfDayYears5.md)
 - [InlineResponse2005DataPerformanceIntraday](docs/InlineResponse2005DataPerformanceIntraday.md)
 - [InlineResponse2005DataRecommendation](docs/InlineResponse2005DataRecommendation.md)
 - [InlineResponse2005DataRecommendationConsensus](docs/InlineResponse2005DataRecommendationConsensus.md)
 - [InlineResponse2005DataRecommendationCounts](docs/InlineResponse2005DataRecommendationCounts.md)
 - [InlineResponse2005DataRecommendationCountsTotal](docs/InlineResponse2005DataRecommendationCountsTotal.md)
 - [InlineResponse2005DataReportedKeyFigures](docs/InlineResponse2005DataReportedKeyFigures.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYear](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYear.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFigures](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFigures.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresCurrency](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresCurrency.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresEbit](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresEbit.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresEbitda](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresEbitda.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresMarketCapitalization](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresMarketCapitalization.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShare](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShare.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareBookValue](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareBookValue.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareCashFlow](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareCashFlow.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareDividends](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareDividends.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareRecurringEarnings](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareRecurringEarnings.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareSales](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareSales.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearEbitMargin](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearEbitMargin.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearEbitdaMargin](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearEbitdaMargin.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearGrossIncomeMargin](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearGrossIncomeMargin.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearNetIncomeMargin](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearNetIncomeMargin.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearOperatingMargin](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearOperatingMargin.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatios](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatios.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosDebtEquity](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosDebtEquity.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosDividendYield](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosDividendYield.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueEbit](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueEbit.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueEbitda](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueEbitda.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueSales](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueSales.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceBookValue](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceBookValue.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceCashFlow](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceCashFlow.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceEarnings](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceEarnings.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceFreeCashFlow](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceFreeCashFlow.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceSales](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearRatiosPriceSales.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearReturnOnAssets](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearReturnOnAssets.md)
 - [InlineResponse2005DataReportedKeyFiguresFirstFiscalYearReturnOnEquity](docs/InlineResponse2005DataReportedKeyFiguresFirstFiscalYearReturnOnEquity.md)
 - [InlineResponse2005DataReportedKeyFiguresSecondFiscalYear](docs/InlineResponse2005DataReportedKeyFiguresSecondFiscalYear.md)
 - [InlineResponse2005DataReportedKeyFiguresThirdFiscalYear](docs/InlineResponse2005DataReportedKeyFiguresThirdFiscalYear.md)
 - [InlineResponse2005DataRsiWilder](docs/InlineResponse2005DataRsiWilder.md)
 - [InlineResponse2005DataRsiWilderDays14](docs/InlineResponse2005DataRsiWilderDays14.md)
 - [InlineResponse2005DataSimpleMovingAverage](docs/InlineResponse2005DataSimpleMovingAverage.md)
 - [InlineResponse2005DataSimpleMovingAverageDays20](docs/InlineResponse2005DataSimpleMovingAverageDays20.md)
 - [InlineResponse2005DataSimpleMovingAverageDays200](docs/InlineResponse2005DataSimpleMovingAverageDays200.md)
 - [InlineResponse2005DataSimpleMovingAverageDays50](docs/InlineResponse2005DataSimpleMovingAverageDays50.md)
 - [InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossover](docs/InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossover.md)
 - [InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50](docs/InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50.md)
 - [InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50Down](docs/InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50Down.md)
 - [InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50Up](docs/InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50Up.md)
 - [InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50UpNumberDays](docs/InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50UpNumberDays.md)
 - [InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200](docs/InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200.md)
 - [InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200Down](docs/InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200Down.md)
 - [InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200Up](docs/InlineResponse2005DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200Up.md)
 - [InlineResponse2005DataStockType](docs/InlineResponse2005DataStockType.md)
 - [InlineResponse2005DataTradingValue](docs/InlineResponse2005DataTradingValue.md)
 - [InlineResponse2005DataTradingValueAverage](docs/InlineResponse2005DataTradingValueAverage.md)
 - [InlineResponse2005DataTradingValueAverageDays30](docs/InlineResponse2005DataTradingValueAverageDays30.md)
 - [InlineResponse2005DataTradingValueAverageDays5](docs/InlineResponse2005DataTradingValueAverageDays5.md)
 - [InlineResponse2005DataValueUnit](docs/InlineResponse2005DataValueUnit.md)
 - [InlineResponse2005DataVolatility](docs/InlineResponse2005DataVolatility.md)
 - [InlineResponse200Currency](docs/InlineResponse200Currency.md)
 - [InlineResponse200Data](docs/InlineResponse200Data.md)
 - [InlineResponse200Dates](docs/InlineResponse200Dates.md)
 - [InlineResponse200Gross](docs/InlineResponse200Gross.md)
 - [InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [InlineResponse200Occurrence](docs/InlineResponse200Occurrence.md)
 - [InlineResponse200OccurrenceFrequency](docs/InlineResponse200OccurrenceFrequency.md)
 - [InlineResponse200Type](docs/InlineResponse200Type.md)
 - [OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [PartialOutputObject](docs/PartialOutputObject.md)
 - [StatusObject](docs/StatusObject.md)
 - [StockDividendListData](docs/StockDividendListData.md)
 - [StockDividendListDataFilter](docs/StockDividendListDataFilter.md)
 - [StockDividendListDataFilterPeriod](docs/StockDividendListDataFilterPeriod.md)
 - [StockDividendListDataFilterType](docs/StockDividendListDataFilterType.md)
 - [StockDividendListMeta](docs/StockDividendListMeta.md)
 - [StockNotationRankingIntradayListData](docs/StockNotationRankingIntradayListData.md)
 - [StockNotationRankingIntradayListDataCompany](docs/StockNotationRankingIntradayListDataCompany.md)
 - [StockNotationRankingIntradayListDataCompanyCountry](docs/StockNotationRankingIntradayListDataCompanyCountry.md)
 - [StockNotationRankingIntradayListDataCurrency](docs/StockNotationRankingIntradayListDataCurrency.md)
 - [StockNotationRankingIntradayListDataIndexMembership](docs/StockNotationRankingIntradayListDataIndexMembership.md)
 - [StockNotationRankingIntradayListDataIndustryClassification](docs/StockNotationRankingIntradayListDataIndustryClassification.md)
 - [StockNotationRankingIntradayListDataInstrumentRestrictionList](docs/StockNotationRankingIntradayListDataInstrumentRestrictionList.md)
 - [StockNotationRankingIntradayListDataMarket](docs/StockNotationRankingIntradayListDataMarket.md)
 - [StockNotationRankingIntradayListDataMarketPriority](docs/StockNotationRankingIntradayListDataMarketPriority.md)
 - [StockNotationRankingIntradayListDataNotationRestrictionList](docs/StockNotationRankingIntradayListDataNotationRestrictionList.md)
 - [StockNotationRankingIntradayListDataPrices](docs/StockNotationRankingIntradayListDataPrices.md)
 - [StockNotationRankingIntradayListMeta](docs/StockNotationRankingIntradayListMeta.md)
 - [StockNotationRankingIntradayListMetaPagination](docs/StockNotationRankingIntradayListMetaPagination.md)
 - [StockNotationScreenerSearchData](docs/StockNotationScreenerSearchData.md)
 - [StockNotationScreenerSearchDataCompany](docs/StockNotationScreenerSearchDataCompany.md)
 - [StockNotationScreenerSearchDataCompanyCountry](docs/StockNotationScreenerSearchDataCompanyCountry.md)
 - [StockNotationScreenerSearchDataCompanyCountryExclude](docs/StockNotationScreenerSearchDataCompanyCountryExclude.md)
 - [StockNotationScreenerSearchDataCompanyCountryRestrict](docs/StockNotationScreenerSearchDataCompanyCountryRestrict.md)
 - [StockNotationScreenerSearchDataCompliance](docs/StockNotationScreenerSearchDataCompliance.md)
 - [StockNotationScreenerSearchDataComplianceFrance](docs/StockNotationScreenerSearchDataComplianceFrance.md)
 - [StockNotationScreenerSearchDataComplianceFranceAnd](docs/StockNotationScreenerSearchDataComplianceFranceAnd.md)
 - [StockNotationScreenerSearchDataComplianceFranceOr](docs/StockNotationScreenerSearchDataComplianceFranceOr.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimates](docs/StockNotationScreenerSearchDataCurrencyDependentEstimates.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimatesCurrency](docs/StockNotationScreenerSearchDataCurrencyDependentEstimatesCurrency.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimatesEbit](docs/StockNotationScreenerSearchDataCurrencyDependentEstimatesEbit.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimatesEbitMean](docs/StockNotationScreenerSearchDataCurrencyDependentEstimatesEbitMean.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimatesEbitda](docs/StockNotationScreenerSearchDataCurrencyDependentEstimatesEbitda.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShare](docs/StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShare.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShareCashFlow](docs/StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShareCashFlow.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShareDividends](docs/StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShareDividends.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShareEarnings](docs/StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShareEarnings.md)
 - [StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShareSales](docs/StockNotationScreenerSearchDataCurrencyDependentEstimatesPerShareSales.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFigures](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFigures.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresCurrency](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresCurrency.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresEbit](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresEbit.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresEbitda](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresEbitda.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresMarketCapitalization](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresMarketCapitalization.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresMarketCapitalizationMaximum](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresMarketCapitalizationMaximum.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresMarketCapitalizationMinimum](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresMarketCapitalizationMinimum.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShare](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShare.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareBookValue](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareBookValue.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareCashFlow](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareCashFlow.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareDividends](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareDividends.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareRecurringDilutedEarnings](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareRecurringDilutedEarnings.md)
 - [StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareSales](docs/StockNotationScreenerSearchDataCurrencyDependentKeyFiguresPerShareSales.md)
 - [StockNotationScreenerSearchDataEbitMargin](docs/StockNotationScreenerSearchDataEbitMargin.md)
 - [StockNotationScreenerSearchDataEbitMarginMaximum](docs/StockNotationScreenerSearchDataEbitMarginMaximum.md)
 - [StockNotationScreenerSearchDataEbitMarginMinimum](docs/StockNotationScreenerSearchDataEbitMarginMinimum.md)
 - [StockNotationScreenerSearchDataEbitdaMargin](docs/StockNotationScreenerSearchDataEbitdaMargin.md)
 - [StockNotationScreenerSearchDataEstimates](docs/StockNotationScreenerSearchDataEstimates.md)
 - [StockNotationScreenerSearchDataFiscalYear](docs/StockNotationScreenerSearchDataFiscalYear.md)
 - [StockNotationScreenerSearchDataFiscalYear1](docs/StockNotationScreenerSearchDataFiscalYear1.md)
 - [StockNotationScreenerSearchDataGrossIncomeMargin](docs/StockNotationScreenerSearchDataGrossIncomeMargin.md)
 - [StockNotationScreenerSearchDataIndexMembership](docs/StockNotationScreenerSearchDataIndexMembership.md)
 - [StockNotationScreenerSearchDataIndustryClassification](docs/StockNotationScreenerSearchDataIndustryClassification.md)
 - [StockNotationScreenerSearchDataIndustryClassificationExclude](docs/StockNotationScreenerSearchDataIndustryClassificationExclude.md)
 - [StockNotationScreenerSearchDataIndustryClassificationRestrict](docs/StockNotationScreenerSearchDataIndustryClassificationRestrict.md)
 - [StockNotationScreenerSearchDataNetIncomeMargin](docs/StockNotationScreenerSearchDataNetIncomeMargin.md)
 - [StockNotationScreenerSearchDataOperatingMargin](docs/StockNotationScreenerSearchDataOperatingMargin.md)
 - [StockNotationScreenerSearchDataPerformance](docs/StockNotationScreenerSearchDataPerformance.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDay](docs/StockNotationScreenerSearchDataPerformanceEndOfDay.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDayDay1](docs/StockNotationScreenerSearchDataPerformanceEndOfDayDay1.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDayMonth1](docs/StockNotationScreenerSearchDataPerformanceEndOfDayMonth1.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDayMonths3](docs/StockNotationScreenerSearchDataPerformanceEndOfDayMonths3.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDayMonths6](docs/StockNotationScreenerSearchDataPerformanceEndOfDayMonths6.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDayWeek1](docs/StockNotationScreenerSearchDataPerformanceEndOfDayWeek1.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDayYear1](docs/StockNotationScreenerSearchDataPerformanceEndOfDayYear1.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDayYearToDate](docs/StockNotationScreenerSearchDataPerformanceEndOfDayYearToDate.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDayYears3](docs/StockNotationScreenerSearchDataPerformanceEndOfDayYears3.md)
 - [StockNotationScreenerSearchDataPerformanceEndOfDayYears5](docs/StockNotationScreenerSearchDataPerformanceEndOfDayYears5.md)
 - [StockNotationScreenerSearchDataPerformanceIntraday](docs/StockNotationScreenerSearchDataPerformanceIntraday.md)
 - [StockNotationScreenerSearchDataRatios](docs/StockNotationScreenerSearchDataRatios.md)
 - [StockNotationScreenerSearchDataRatios1](docs/StockNotationScreenerSearchDataRatios1.md)
 - [StockNotationScreenerSearchDataRatios1DividendYield](docs/StockNotationScreenerSearchDataRatios1DividendYield.md)
 - [StockNotationScreenerSearchDataRatios1EnterpriseValueEbit](docs/StockNotationScreenerSearchDataRatios1EnterpriseValueEbit.md)
 - [StockNotationScreenerSearchDataRatios1EnterpriseValueEbitda](docs/StockNotationScreenerSearchDataRatios1EnterpriseValueEbitda.md)
 - [StockNotationScreenerSearchDataRatios1EnterpriseValueSales](docs/StockNotationScreenerSearchDataRatios1EnterpriseValueSales.md)
 - [StockNotationScreenerSearchDataRatios1PriceBookValue](docs/StockNotationScreenerSearchDataRatios1PriceBookValue.md)
 - [StockNotationScreenerSearchDataRatios1PriceCashFlow](docs/StockNotationScreenerSearchDataRatios1PriceCashFlow.md)
 - [StockNotationScreenerSearchDataRatios1PriceEarnings](docs/StockNotationScreenerSearchDataRatios1PriceEarnings.md)
 - [StockNotationScreenerSearchDataRatios1PriceEarningsGrowth](docs/StockNotationScreenerSearchDataRatios1PriceEarningsGrowth.md)
 - [StockNotationScreenerSearchDataRatios1PriceEarningsGrowthMean](docs/StockNotationScreenerSearchDataRatios1PriceEarningsGrowthMean.md)
 - [StockNotationScreenerSearchDataRatios1PriceFreeCashFlow](docs/StockNotationScreenerSearchDataRatios1PriceFreeCashFlow.md)
 - [StockNotationScreenerSearchDataRatios1PriceSales](docs/StockNotationScreenerSearchDataRatios1PriceSales.md)
 - [StockNotationScreenerSearchDataRatiosDebtEquity](docs/StockNotationScreenerSearchDataRatiosDebtEquity.md)
 - [StockNotationScreenerSearchDataRatiosDividendYield](docs/StockNotationScreenerSearchDataRatiosDividendYield.md)
 - [StockNotationScreenerSearchDataRatiosEnterpriseValueEbit](docs/StockNotationScreenerSearchDataRatiosEnterpriseValueEbit.md)
 - [StockNotationScreenerSearchDataRatiosEnterpriseValueEbitda](docs/StockNotationScreenerSearchDataRatiosEnterpriseValueEbitda.md)
 - [StockNotationScreenerSearchDataRatiosEnterpriseValueSales](docs/StockNotationScreenerSearchDataRatiosEnterpriseValueSales.md)
 - [StockNotationScreenerSearchDataRatiosPriceBookValue](docs/StockNotationScreenerSearchDataRatiosPriceBookValue.md)
 - [StockNotationScreenerSearchDataRatiosPriceCashFlow](docs/StockNotationScreenerSearchDataRatiosPriceCashFlow.md)
 - [StockNotationScreenerSearchDataRatiosPriceEarnings](docs/StockNotationScreenerSearchDataRatiosPriceEarnings.md)
 - [StockNotationScreenerSearchDataRatiosPriceFreeCashFlow](docs/StockNotationScreenerSearchDataRatiosPriceFreeCashFlow.md)
 - [StockNotationScreenerSearchDataRatiosPriceSales](docs/StockNotationScreenerSearchDataRatiosPriceSales.md)
 - [StockNotationScreenerSearchDataRecommendation](docs/StockNotationScreenerSearchDataRecommendation.md)
 - [StockNotationScreenerSearchDataRecommendationConsensus](docs/StockNotationScreenerSearchDataRecommendationConsensus.md)
 - [StockNotationScreenerSearchDataRecommendationCounts](docs/StockNotationScreenerSearchDataRecommendationCounts.md)
 - [StockNotationScreenerSearchDataRecommendationCountsTotal](docs/StockNotationScreenerSearchDataRecommendationCountsTotal.md)
 - [StockNotationScreenerSearchDataRecommendationCountsTotalMaximum](docs/StockNotationScreenerSearchDataRecommendationCountsTotalMaximum.md)
 - [StockNotationScreenerSearchDataRecommendationCountsTotalMinimum](docs/StockNotationScreenerSearchDataRecommendationCountsTotalMinimum.md)
 - [StockNotationScreenerSearchDataReportedKeyFigures](docs/StockNotationScreenerSearchDataReportedKeyFigures.md)
 - [StockNotationScreenerSearchDataReturnOnAssets](docs/StockNotationScreenerSearchDataReturnOnAssets.md)
 - [StockNotationScreenerSearchDataReturnOnAssets1](docs/StockNotationScreenerSearchDataReturnOnAssets1.md)
 - [StockNotationScreenerSearchDataReturnOnAssets1Mean](docs/StockNotationScreenerSearchDataReturnOnAssets1Mean.md)
 - [StockNotationScreenerSearchDataReturnOnEquity](docs/StockNotationScreenerSearchDataReturnOnEquity.md)
 - [StockNotationScreenerSearchDataReturnOnEquity1](docs/StockNotationScreenerSearchDataReturnOnEquity1.md)
 - [StockNotationScreenerSearchDataRsiWilder](docs/StockNotationScreenerSearchDataRsiWilder.md)
 - [StockNotationScreenerSearchDataRsiWilderDays14](docs/StockNotationScreenerSearchDataRsiWilderDays14.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverage](docs/StockNotationScreenerSearchDataSimpleMovingAverage.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageDays20](docs/StockNotationScreenerSearchDataSimpleMovingAverageDays20.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageDays200](docs/StockNotationScreenerSearchDataSimpleMovingAverageDays200.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageDays50](docs/StockNotationScreenerSearchDataSimpleMovingAverageDays50.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossover](docs/StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossover.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50](docs/StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDays](docs/StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDays.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDaysMaximum](docs/StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDaysMaximum.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDaysMinimum](docs/StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDaysMinimum.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200](docs/StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDays](docs/StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDays.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDaysMaximum](docs/StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDaysMaximum.md)
 - [StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDaysMinimum](docs/StockNotationScreenerSearchDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDaysMinimum.md)
 - [StockNotationScreenerSearchDataTradingValue](docs/StockNotationScreenerSearchDataTradingValue.md)
 - [StockNotationScreenerSearchDataTradingValueAverage](docs/StockNotationScreenerSearchDataTradingValueAverage.md)
 - [StockNotationScreenerSearchDataTradingValueAverageDays30](docs/StockNotationScreenerSearchDataTradingValueAverageDays30.md)
 - [StockNotationScreenerSearchDataTradingValueAverageDays5](docs/StockNotationScreenerSearchDataTradingValueAverageDays5.md)
 - [StockNotationScreenerSearchDataValidation](docs/StockNotationScreenerSearchDataValidation.md)
 - [StockNotationScreenerSearchDataValidationInstrumentSelectionList](docs/StockNotationScreenerSearchDataValidationInstrumentSelectionList.md)
 - [StockNotationScreenerSearchDataValidationInstrumentSelectionListExclude](docs/StockNotationScreenerSearchDataValidationInstrumentSelectionListExclude.md)
 - [StockNotationScreenerSearchDataValidationInstrumentSelectionListRestrict](docs/StockNotationScreenerSearchDataValidationInstrumentSelectionListRestrict.md)
 - [StockNotationScreenerSearchDataValidationMarket](docs/StockNotationScreenerSearchDataValidationMarket.md)
 - [StockNotationScreenerSearchDataValidationMarketPriority](docs/StockNotationScreenerSearchDataValidationMarketPriority.md)
 - [StockNotationScreenerSearchDataValidationMarketSelection](docs/StockNotationScreenerSearchDataValidationMarketSelection.md)
 - [StockNotationScreenerSearchDataValidationMarketSelectionExclude](docs/StockNotationScreenerSearchDataValidationMarketSelectionExclude.md)
 - [StockNotationScreenerSearchDataValidationMarketSelectionRestrict](docs/StockNotationScreenerSearchDataValidationMarketSelectionRestrict.md)
 - [StockNotationScreenerSearchDataValidationNotationSelectionList](docs/StockNotationScreenerSearchDataValidationNotationSelectionList.md)
 - [StockNotationScreenerSearchDataValidationNotationSelectionListExclude](docs/StockNotationScreenerSearchDataValidationNotationSelectionListExclude.md)
 - [StockNotationScreenerSearchDataValidationNotationSelectionListRestrict](docs/StockNotationScreenerSearchDataValidationNotationSelectionListRestrict.md)
 - [StockNotationScreenerSearchDataValidationPrices](docs/StockNotationScreenerSearchDataValidationPrices.md)
 - [StockNotationScreenerSearchDataValidationPricesLatest](docs/StockNotationScreenerSearchDataValidationPricesLatest.md)
 - [StockNotationScreenerSearchDataValidationPricesPrevious](docs/StockNotationScreenerSearchDataValidationPricesPrevious.md)
 - [StockNotationScreenerSearchDataValidationValueUnit](docs/StockNotationScreenerSearchDataValidationValueUnit.md)
 - [StockNotationScreenerSearchDataValidationValueUnitExclude](docs/StockNotationScreenerSearchDataValidationValueUnitExclude.md)
 - [StockNotationScreenerSearchDataValidationValueUnitRestrict](docs/StockNotationScreenerSearchDataValidationValueUnitRestrict.md)
 - [StockNotationScreenerSearchDataVolatility](docs/StockNotationScreenerSearchDataVolatility.md)
 - [StockNotationScreenerSearchMeta](docs/StockNotationScreenerSearchMeta.md)
 - [StockNotationScreenerSearchMetaPagination](docs/StockNotationScreenerSearchMetaPagination.md)
 - [StockNotationScreenerValueRangesGetMeta](docs/StockNotationScreenerValueRangesGetMeta.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
