code/java/StocksAPIforDigitalPortals/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Stocks API for Digital Portals client library for Java

[![API Version](https://img.shields.io/badge/api-v2-blue)](https://endpointreference.mdgms.com)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/stocksapifordigitalportals/0.11.1)](https://central.sonatype.com/artifact/com.factset.sdk/stocksapifordigitalportals/0.11.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The Stocks API features a screener to search for equity instruments based on stock-specific parameters.

Parameters for up to three fiscal years might now be used in one request; data is available for the ten most recent completed fiscal years.
Estimates are available for the current and two consecutive fiscal years. Search criteria also include benchmark-related attributes
(beta, correlation, outperformance), and ESG parameters, based on FactSet’s Truvalue ESG scores.

A separate endpoint returns the possible values and value ranges for the parameters that the endpoint /stock/notation/screener/search accepts
Application developers can request the values and value ranges only for a restricted set of notations that match predefined parameters. This
functionality may be used to pre-fill the values and value ranges of the parameters of the /stock/notation/screener/search endpoint so that
performing a search always leads to a non-empty set of notations.

The endpoint /stock/notation/ranking/intraday/list ranks stocks notations using intraday figures, for example to build a gainers/losers list. 

Additional endpoints include end-of-day benchmark key figures, and selected fundamentals (as of end of fiscal year and with daily updates).

This API is fully integrated with the corresponding [Quotes API](https://developer.factset.com/api-catalog/quotes-api-digital-portals), allowing
access to detailed price and performance information of instruments, as well as basic security identifier cross-reference. For direct access
to price histories, please refer to the [Time Series API for Digital Portals](https://developer.factset.com/api-catalog/time-series-api-digital-portals).

Similar criteria based screener APIs exist for fixed income instruments and securitized derivatives: See the
[Bonds API](https://developer.factset.com/api-catalog/bonds-api-digital-portals) and the
[Securitized Derivatives API](https://developer.factset.com/api-catalog/securitized-derivatives-api-digital-portals) for details.

See also the recipe [\"Enrich Your Digital Portal with Flexible Equity Screening\"](https://developer.factset.com/recipe-catalog/enrich-your-digital-portal-flexible-equity-screening).


This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- SDK version: 0.11.1
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>stocksapifordigitalportals</artifactId>
  <version>0.11.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:stocksapifordigitalportals:0.11.1"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.StocksAPIforDigitalPortals.*;
import com.factset.sdk.StocksAPIforDigitalPortals.auth.*;
import com.factset.sdk.StocksAPIforDigitalPortals.models.*;
import com.factset.sdk.StocksAPIforDigitalPortals.api.CompanyApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class CompanyApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        CompanyApi apiInstance = new CompanyApi(defaultClient);
        String id = "id_example"; // String | 
        java.util.Set<String> attributes = Arrays.asList(); // java.util.Set<String> | Limit the attributes returned in the response to the specified set.
        String language = "language_example"; // String | 
        try {
            InlineResponse2005 result = apiInstance.getCompanyBoardListByInstrument(id, attributes, language);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling CompanyApi#getCompanyBoardListByInstrument");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.StocksAPIforDigitalPortals.*;
import com.factset.sdk.StocksAPIforDigitalPortals.api.CompanyApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

CompanyApi apiInstance = new CompanyApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.StocksAPIforDigitalPortals.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CompanyApi* | [**getCompanyBoardListByInstrument**](docs/CompanyApi.md#getCompanyBoardListByInstrument) | **GET** /company/board/listByInstrument | List of boards for a company, with their officers.
*CompanyApi* | [**getCompanyBoardOfficerFunctionDeliveryList**](docs/CompanyApi.md#getCompanyBoardOfficerFunctionDeliveryList) | **GET** /company/board/officer/function/delivery/list | List of officer functions as provided by a delivery.
*CompanyApi* | [**getCompanyBoardTypeList**](docs/CompanyApi.md#getCompanyBoardTypeList) | **GET** /company/board/type/list | List of company board types.
*CompanyApi* | [**postCompanyEstimatesListByInstrument**](docs/CompanyApi.md#postCompanyEstimatesListByInstrument) | **POST** /company/estimates/listByInstrument | Estimates for selected figures for a stock.
*CompanyApi* | [**postCompanyKeyItemsCurrentGetByInstrument**](docs/CompanyApi.md#postCompanyKeyItemsCurrentGetByInstrument) | **POST** /company/keyItems/current/getByInstrument | Fundamentals for a stock with potentially daily updates.
*CompanyApi* | [**postCompanyKeyItemsFiscalYearListByInstrument**](docs/CompanyApi.md#postCompanyKeyItemsFiscalYearListByInstrument) | **POST** /company/keyItems/fiscalYear/listByInstrument | Selected fundamentals for a stock with values as of the end of a fiscal year.
*StockApi* | [**getStockCompositeProfileGetByNotation**](docs/StockApi.md#getStockCompositeProfileGetByNotation) | **GET** /stock/composite/profile/getByNotation | Provides key elements of a stock profile together with the profile of the issuing company.
*StockApi* | [**getStockDividendTypeList**](docs/StockApi.md#getStockDividendTypeList) | **GET** /stock/dividend/type/list | List of dividend types.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkMonth1Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkMonth1Get) | **GET** /stock/notation/keyFigures/benchmark/month/1/get | End-of-day (EOD) benchmark key figures of a stock for the time range of one month.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkMonth3Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkMonth3Get) | **GET** /stock/notation/keyFigures/benchmark/month/3/get | End-of-day (EOD) benchmark key figures of a stock for the time range of three months.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkMonth6Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkMonth6Get) | **GET** /stock/notation/keyFigures/benchmark/month/6/get | End-of-day (EOD) benchmark key figures of a stock for the time range of six months.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkWeek1Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkWeek1Get) | **GET** /stock/notation/keyFigures/benchmark/week/1/get | End-of-day (EOD) benchmark key figures of a stock for the time range of one week.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkYear1Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkYear1Get) | **GET** /stock/notation/keyFigures/benchmark/year/1/get | End-of-day (EOD) benchmark key figures of a stock for the time range of one year.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkYear3Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkYear3Get) | **GET** /stock/notation/keyFigures/benchmark/year/3/get | End-of-day (EOD) benchmark key figures of a stock for the time range of three years.
*StockApi* | [**getStockNotationKeyFiguresBenchmarkYear5Get**](docs/StockApi.md#getStockNotationKeyFiguresBenchmarkYear5Get) | **GET** /stock/notation/keyFigures/benchmark/year/5/get | End-of-day (EOD) benchmark key figures of a stock for the time range of five years.
*StockApi* | [**getStockOwnerList**](docs/StockApi.md#getStockOwnerList) | **GET** /stock/owner/list | List of owners for a specific type of a company&#39;s shares.
*StockApi* | [**getStockRecommendationAggregateGet**](docs/StockApi.md#getStockRecommendationAggregateGet) | **GET** /stock/recommendation/aggregate/get | Target price and aggregated recommendations for a stock.
*StockApi* | [**getStockRecommendationAggregateHistoryList**](docs/StockApi.md#getStockRecommendationAggregateHistoryList) | **GET** /stock/recommendation/aggregate/history/list | Current and historical trade recommendations and target prices for a stock.
*StockApi* | [**postStockDividendList**](docs/StockApi.md#postStockDividendList) | **POST** /stock/dividend/list | List of dividends for a stock.
*StockApi* | [**postStockNotationRankingIntradayList**](docs/StockApi.md#postStockNotationRankingIntradayList) | **POST** /stock/notation/ranking/intraday/list | Ranking of stocks&#39; notations using intraday figures.
*StockApi* | [**postStockNotationScreenerSearch**](docs/StockApi.md#postStockNotationScreenerSearch) | **POST** /stock/notation/screener/search | Screener for stocks&#39; notations based on stock-specific parameters.
*StockApi* | [**postStockNotationScreenerValueRangesGet**](docs/StockApi.md#postStockNotationScreenerValueRangesGet) | **POST** /stock/notation/screener/valueRanges/get | Possible values and value ranges for the parameters used in the endpoint &#x60;/stock/notation/screener/search&#x60;.


## Documentation for Models

 - [CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [ErrorMetaObject](docs/ErrorMetaObject.md)
 - [InlineResponse200](docs/InlineResponse200.md)
 - [InlineResponse2001](docs/InlineResponse2001.md)
 - [InlineResponse20010](docs/InlineResponse20010.md)
 - [InlineResponse20010Data](docs/InlineResponse20010Data.md)
 - [InlineResponse20010DataCurrency](docs/InlineResponse20010DataCurrency.md)
 - [InlineResponse20010DataDates](docs/InlineResponse20010DataDates.md)
 - [InlineResponse20010DataDividends](docs/InlineResponse20010DataDividends.md)
 - [InlineResponse20010DataGross](docs/InlineResponse20010DataGross.md)
 - [InlineResponse20010DataOccurrence](docs/InlineResponse20010DataOccurrence.md)
 - [InlineResponse20010DataOccurrenceFrequency](docs/InlineResponse20010DataOccurrenceFrequency.md)
 - [InlineResponse20010DataType](docs/InlineResponse20010DataType.md)
 - [InlineResponse20011](docs/InlineResponse20011.md)
 - [InlineResponse20011Data](docs/InlineResponse20011Data.md)
 - [InlineResponse20012](docs/InlineResponse20012.md)
 - [InlineResponse20012Data](docs/InlineResponse20012Data.md)
 - [InlineResponse20012DataBenchmarks](docs/InlineResponse20012DataBenchmarks.md)
 - [InlineResponse20012DataNotation](docs/InlineResponse20012DataNotation.md)
 - [InlineResponse20012DataNotationInstrument](docs/InlineResponse20012DataNotationInstrument.md)
 - [InlineResponse20012DataStatus](docs/InlineResponse20012DataStatus.md)
 - [InlineResponse20013](docs/InlineResponse20013.md)
 - [InlineResponse20013Accumulated](docs/InlineResponse20013Accumulated.md)
 - [InlineResponse20013Currency](docs/InlineResponse20013Currency.md)
 - [InlineResponse20013Data](docs/InlineResponse20013Data.md)
 - [InlineResponse20013Fsym](docs/InlineResponse20013Fsym.md)
 - [InlineResponse20013FsymListing](docs/InlineResponse20013FsymListing.md)
 - [InlineResponse20013FsymRegional](docs/InlineResponse20013FsymRegional.md)
 - [InlineResponse20013Instrument](docs/InlineResponse20013Instrument.md)
 - [InlineResponse20013InstrumentIndustryClassification](docs/InlineResponse20013InstrumentIndustryClassification.md)
 - [InlineResponse20013InstrumentIndustryClassificationRbics](docs/InlineResponse20013InstrumentIndustryClassificationRbics.md)
 - [InlineResponse20013Market](docs/InlineResponse20013Market.md)
 - [InlineResponse20013Meta](docs/InlineResponse20013Meta.md)
 - [InlineResponse20013Trade](docs/InlineResponse20013Trade.md)
 - [InlineResponse20013TradePerformance](docs/InlineResponse20013TradePerformance.md)
 - [InlineResponse20014](docs/InlineResponse20014.md)
 - [InlineResponse20014Benchmark](docs/InlineResponse20014Benchmark.md)
 - [InlineResponse20014BenchmarkBeta](docs/InlineResponse20014BenchmarkBeta.md)
 - [InlineResponse20014BenchmarkCorrelation](docs/InlineResponse20014BenchmarkCorrelation.md)
 - [InlineResponse20014BenchmarkIndex](docs/InlineResponse20014BenchmarkIndex.md)
 - [InlineResponse20014BenchmarkOutperformance](docs/InlineResponse20014BenchmarkOutperformance.md)
 - [InlineResponse20014Compliance](docs/InlineResponse20014Compliance.md)
 - [InlineResponse20014ComplianceFrance](docs/InlineResponse20014ComplianceFrance.md)
 - [InlineResponse20014CurrentKeyFigures](docs/InlineResponse20014CurrentKeyFigures.md)
 - [InlineResponse20014CurrentKeyFiguresCompany](docs/InlineResponse20014CurrentKeyFiguresCompany.md)
 - [InlineResponse20014CurrentKeyFiguresCompanyCurrencyDependent](docs/InlineResponse20014CurrentKeyFiguresCompanyCurrencyDependent.md)
 - [InlineResponse20014CurrentKeyFiguresCompanyCurrencyDependentPerShare](docs/InlineResponse20014CurrentKeyFiguresCompanyCurrencyDependentPerShare.md)
 - [InlineResponse20014CurrentKeyFiguresShareInstrument](docs/InlineResponse20014CurrentKeyFiguresShareInstrument.md)
 - [InlineResponse20014CurrentKeyFiguresShareInstrumentCurrencyDependent](docs/InlineResponse20014CurrentKeyFiguresShareInstrumentCurrencyDependent.md)
 - [InlineResponse20014CurrentKeyFiguresShareInstrumentCurrencyDependentPerShare](docs/InlineResponse20014CurrentKeyFiguresShareInstrumentCurrencyDependentPerShare.md)
 - [InlineResponse20014CurrentKeyFiguresShareInstrumentRatios](docs/InlineResponse20014CurrentKeyFiguresShareInstrumentRatios.md)
 - [InlineResponse20014Data](docs/InlineResponse20014Data.md)
 - [InlineResponse20014Esg](docs/InlineResponse20014Esg.md)
 - [InlineResponse20014EsgTruvalueLabs](docs/InlineResponse20014EsgTruvalueLabs.md)
 - [InlineResponse20014EsgTruvalueLabsSasb](docs/InlineResponse20014EsgTruvalueLabsSasb.md)
 - [InlineResponse20014EsgTruvalueLabsSasbAllCategories](docs/InlineResponse20014EsgTruvalueLabsSasbAllCategories.md)
 - [InlineResponse20014EsgTruvalueLabsSasbMateriality](docs/InlineResponse20014EsgTruvalueLabsSasbMateriality.md)
 - [InlineResponse20014EsgTruvalueLabsSdg](docs/InlineResponse20014EsgTruvalueLabsSdg.md)
 - [InlineResponse20014EsgTruvalueLabsSdgImpact](docs/InlineResponse20014EsgTruvalueLabsSdgImpact.md)
 - [InlineResponse20014Estimates](docs/InlineResponse20014Estimates.md)
 - [InlineResponse20014EstimatesFirstFiscalYear](docs/InlineResponse20014EstimatesFirstFiscalYear.md)
 - [InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimates](docs/InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimates.md)
 - [InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesCurrency](docs/InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesCurrency.md)
 - [InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesEbit](docs/InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesEbit.md)
 - [InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesEbitda](docs/InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesEbitda.md)
 - [InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShare](docs/InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShare.md)
 - [InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareCashFlow](docs/InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareCashFlow.md)
 - [InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareDividends](docs/InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareDividends.md)
 - [InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareEarnings](docs/InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareEarnings.md)
 - [InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareSales](docs/InlineResponse20014EstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareSales.md)
 - [InlineResponse20014EstimatesFirstFiscalYearFiscalYear](docs/InlineResponse20014EstimatesFirstFiscalYearFiscalYear.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatios](docs/InlineResponse20014EstimatesFirstFiscalYearRatios.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosDividendYield](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosDividendYield.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosEnterpriseValueEbit](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosEnterpriseValueEbit.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosEnterpriseValueEbitda](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosEnterpriseValueEbitda.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosEnterpriseValueSales](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosEnterpriseValueSales.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosPriceBookValue](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosPriceBookValue.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosPriceCashFlow](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosPriceCashFlow.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosPriceEarnings](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosPriceEarnings.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosPriceEarningsGrowth](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosPriceEarningsGrowth.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosPriceFreeCashFlow](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosPriceFreeCashFlow.md)
 - [InlineResponse20014EstimatesFirstFiscalYearRatiosPriceSales](docs/InlineResponse20014EstimatesFirstFiscalYearRatiosPriceSales.md)
 - [InlineResponse20014EstimatesFirstFiscalYearReturnOnAssets](docs/InlineResponse20014EstimatesFirstFiscalYearReturnOnAssets.md)
 - [InlineResponse20014EstimatesFirstFiscalYearReturnOnEquity](docs/InlineResponse20014EstimatesFirstFiscalYearReturnOnEquity.md)
 - [InlineResponse20014EstimatesSecondFiscalYear](docs/InlineResponse20014EstimatesSecondFiscalYear.md)
 - [InlineResponse20014EstimatesThirdFiscalYear](docs/InlineResponse20014EstimatesThirdFiscalYear.md)
 - [InlineResponse20014Instrument](docs/InlineResponse20014Instrument.md)
 - [InlineResponse20014InstrumentCompany](docs/InlineResponse20014InstrumentCompany.md)
 - [InlineResponse20014InstrumentCompanyCountry](docs/InlineResponse20014InstrumentCompanyCountry.md)
 - [InlineResponse20014InstrumentIndustryClassification](docs/InlineResponse20014InstrumentIndustryClassification.md)
 - [InlineResponse20014InstrumentIndustryClassificationRbics](docs/InlineResponse20014InstrumentIndustryClassificationRbics.md)
 - [InlineResponse20014InstrumentIndustryClassificationRbicsLevel1](docs/InlineResponse20014InstrumentIndustryClassificationRbicsLevel1.md)
 - [InlineResponse20014InstrumentIndustryClassificationRbicsLevel2](docs/InlineResponse20014InstrumentIndustryClassificationRbicsLevel2.md)
 - [InlineResponse20014InstrumentIndustryClassificationRbicsLevel3](docs/InlineResponse20014InstrumentIndustryClassificationRbicsLevel3.md)
 - [InlineResponse20014InstrumentIndustryClassificationRbicsLevel4](docs/InlineResponse20014InstrumentIndustryClassificationRbicsLevel4.md)
 - [InlineResponse20014InstrumentIndustryClassificationRbicsLevel5](docs/InlineResponse20014InstrumentIndustryClassificationRbicsLevel5.md)
 - [InlineResponse20014InstrumentIndustryClassificationRbicsLevel6](docs/InlineResponse20014InstrumentIndustryClassificationRbicsLevel6.md)
 - [InlineResponse20014InstrumentNsin](docs/InlineResponse20014InstrumentNsin.md)
 - [InlineResponse20014Market](docs/InlineResponse20014Market.md)
 - [InlineResponse20014Nsin](docs/InlineResponse20014Nsin.md)
 - [InlineResponse20014Performance](docs/InlineResponse20014Performance.md)
 - [InlineResponse20014PerformanceEndOfDay](docs/InlineResponse20014PerformanceEndOfDay.md)
 - [InlineResponse20014Recommendation](docs/InlineResponse20014Recommendation.md)
 - [InlineResponse20014RecommendationConsensus](docs/InlineResponse20014RecommendationConsensus.md)
 - [InlineResponse20014RecommendationConsensusChange](docs/InlineResponse20014RecommendationConsensusChange.md)
 - [InlineResponse20014RecommendationCounts](docs/InlineResponse20014RecommendationCounts.md)
 - [InlineResponse20014ReportedKeyFigures](docs/InlineResponse20014ReportedKeyFigures.md)
 - [InlineResponse20014ReportedKeyFiguresFirstFiscalYear](docs/InlineResponse20014ReportedKeyFiguresFirstFiscalYear.md)
 - [InlineResponse20014ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFigures](docs/InlineResponse20014ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFigures.md)
 - [InlineResponse20014ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresCurrency](docs/InlineResponse20014ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresCurrency.md)
 - [InlineResponse20014ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShare](docs/InlineResponse20014ReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShare.md)
 - [InlineResponse20014ReportedKeyFiguresFirstFiscalYearFiscalYear](docs/InlineResponse20014ReportedKeyFiguresFirstFiscalYearFiscalYear.md)
 - [InlineResponse20014ReportedKeyFiguresFirstFiscalYearRatios](docs/InlineResponse20014ReportedKeyFiguresFirstFiscalYearRatios.md)
 - [InlineResponse20014ReportedKeyFiguresSecondFiscalYear](docs/InlineResponse20014ReportedKeyFiguresSecondFiscalYear.md)
 - [InlineResponse20014ReportedKeyFiguresThirdFiscalYear](docs/InlineResponse20014ReportedKeyFiguresThirdFiscalYear.md)
 - [InlineResponse20014RsiWilder](docs/InlineResponse20014RsiWilder.md)
 - [InlineResponse20014SimpleMovingAverage](docs/InlineResponse20014SimpleMovingAverage.md)
 - [InlineResponse20014SimpleMovingAverageTradingDaysSinceCrossover](docs/InlineResponse20014SimpleMovingAverageTradingDaysSinceCrossover.md)
 - [InlineResponse20014SimpleMovingAverageTradingDaysSinceCrossoverSma20vs50](docs/InlineResponse20014SimpleMovingAverageTradingDaysSinceCrossoverSma20vs50.md)
 - [InlineResponse20014SimpleMovingAverageTradingDaysSinceCrossoverSma50vs200](docs/InlineResponse20014SimpleMovingAverageTradingDaysSinceCrossoverSma50vs200.md)
 - [InlineResponse20014TradingValue](docs/InlineResponse20014TradingValue.md)
 - [InlineResponse20014TradingValueAverage](docs/InlineResponse20014TradingValueAverage.md)
 - [InlineResponse20014ValueUnit](docs/InlineResponse20014ValueUnit.md)
 - [InlineResponse20014Volatility](docs/InlineResponse20014Volatility.md)
 - [InlineResponse20015](docs/InlineResponse20015.md)
 - [InlineResponse20015Data](docs/InlineResponse20015Data.md)
 - [InlineResponse20015DataCategories](docs/InlineResponse20015DataCategories.md)
 - [InlineResponse20015DataCompany](docs/InlineResponse20015DataCompany.md)
 - [InlineResponse20015DataCompanyCountry](docs/InlineResponse20015DataCompanyCountry.md)
 - [InlineResponse20015DataCompliance](docs/InlineResponse20015DataCompliance.md)
 - [InlineResponse20015DataComplianceFrance](docs/InlineResponse20015DataComplianceFrance.md)
 - [InlineResponse20015DataEstimates](docs/InlineResponse20015DataEstimates.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYear](docs/InlineResponse20015DataEstimatesFirstFiscalYear.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimates](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimates.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesCurrency](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesCurrency.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbit](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbit.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbitMean](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbitMean.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbitda](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesEbitda.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShare](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShare.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareCashFlow](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareCashFlow.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareDividends](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareDividends.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareEarnings](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareEarnings.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareSales](docs/InlineResponse20015DataEstimatesFirstFiscalYearCurrencyDependentEstimatesPerShareSales.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearFiscalYear](docs/InlineResponse20015DataEstimatesFirstFiscalYearFiscalYear.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatios](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatios.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosDividendYield](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosDividendYield.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosDividendYieldMean](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosDividendYieldMean.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosEnterpriseValueEbit](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosEnterpriseValueEbit.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosEnterpriseValueEbitda](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosEnterpriseValueEbitda.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosEnterpriseValueSales](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosEnterpriseValueSales.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceBookValue](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceBookValue.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceCashFlow](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceCashFlow.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceEarnings](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceEarnings.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceEarningsGrowth](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceEarningsGrowth.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceFreeCashFlow](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceFreeCashFlow.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceSales](docs/InlineResponse20015DataEstimatesFirstFiscalYearRatiosPriceSales.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearReturnOnAssets](docs/InlineResponse20015DataEstimatesFirstFiscalYearReturnOnAssets.md)
 - [InlineResponse20015DataEstimatesFirstFiscalYearReturnOnEquity](docs/InlineResponse20015DataEstimatesFirstFiscalYearReturnOnEquity.md)
 - [InlineResponse20015DataEstimatesSecondFiscalYear](docs/InlineResponse20015DataEstimatesSecondFiscalYear.md)
 - [InlineResponse20015DataEstimatesThirdFiscalYear](docs/InlineResponse20015DataEstimatesThirdFiscalYear.md)
 - [InlineResponse20015DataIndustryClassification](docs/InlineResponse20015DataIndustryClassification.md)
 - [InlineResponse20015DataLevel](docs/InlineResponse20015DataLevel.md)
 - [InlineResponse20015DataMarket](docs/InlineResponse20015DataMarket.md)
 - [InlineResponse20015DataParent](docs/InlineResponse20015DataParent.md)
 - [InlineResponse20015DataPerformance](docs/InlineResponse20015DataPerformance.md)
 - [InlineResponse20015DataPerformanceEndOfDay](docs/InlineResponse20015DataPerformanceEndOfDay.md)
 - [InlineResponse20015DataPerformanceEndOfDayDay1](docs/InlineResponse20015DataPerformanceEndOfDayDay1.md)
 - [InlineResponse20015DataPerformanceEndOfDayMonth1](docs/InlineResponse20015DataPerformanceEndOfDayMonth1.md)
 - [InlineResponse20015DataPerformanceEndOfDayMonths3](docs/InlineResponse20015DataPerformanceEndOfDayMonths3.md)
 - [InlineResponse20015DataPerformanceEndOfDayMonths6](docs/InlineResponse20015DataPerformanceEndOfDayMonths6.md)
 - [InlineResponse20015DataPerformanceEndOfDayWeek1](docs/InlineResponse20015DataPerformanceEndOfDayWeek1.md)
 - [InlineResponse20015DataPerformanceEndOfDayYear1](docs/InlineResponse20015DataPerformanceEndOfDayYear1.md)
 - [InlineResponse20015DataPerformanceEndOfDayYearToDate](docs/InlineResponse20015DataPerformanceEndOfDayYearToDate.md)
 - [InlineResponse20015DataPerformanceEndOfDayYears3](docs/InlineResponse20015DataPerformanceEndOfDayYears3.md)
 - [InlineResponse20015DataPerformanceEndOfDayYears5](docs/InlineResponse20015DataPerformanceEndOfDayYears5.md)
 - [InlineResponse20015DataPerformanceIntraday](docs/InlineResponse20015DataPerformanceIntraday.md)
 - [InlineResponse20015DataRecommendation](docs/InlineResponse20015DataRecommendation.md)
 - [InlineResponse20015DataRecommendationConsensus](docs/InlineResponse20015DataRecommendationConsensus.md)
 - [InlineResponse20015DataRecommendationCounts](docs/InlineResponse20015DataRecommendationCounts.md)
 - [InlineResponse20015DataRecommendationCountsTotal](docs/InlineResponse20015DataRecommendationCountsTotal.md)
 - [InlineResponse20015DataReportedKeyFigures](docs/InlineResponse20015DataReportedKeyFigures.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYear](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYear.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFigures](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFigures.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresCurrency](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresCurrency.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresEbit](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresEbit.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresEbitda](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresEbitda.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresMarketCapitalization](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresMarketCapitalization.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShare](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShare.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareBookValue](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareBookValue.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareCashFlow](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareCashFlow.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareDividends](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareDividends.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareRecurringEarnings](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareRecurringEarnings.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareSales](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearCurrencyDependentKeyFiguresPerShareSales.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearEbitMargin](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearEbitMargin.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearEbitdaMargin](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearEbitdaMargin.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearGrossIncomeMargin](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearGrossIncomeMargin.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearNetIncomeMargin](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearNetIncomeMargin.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearOperatingMargin](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearOperatingMargin.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatios](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatios.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosDebtEquity](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosDebtEquity.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosDividendYield](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosDividendYield.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueEbit](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueEbit.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueEbitda](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueEbitda.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueSales](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosEnterpriseValueSales.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceBookValue](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceBookValue.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceCashFlow](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceCashFlow.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceEarnings](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceEarnings.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceFreeCashFlow](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceFreeCashFlow.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceSales](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearRatiosPriceSales.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearReturnOnAssets](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearReturnOnAssets.md)
 - [InlineResponse20015DataReportedKeyFiguresFirstFiscalYearReturnOnEquity](docs/InlineResponse20015DataReportedKeyFiguresFirstFiscalYearReturnOnEquity.md)
 - [InlineResponse20015DataReportedKeyFiguresSecondFiscalYear](docs/InlineResponse20015DataReportedKeyFiguresSecondFiscalYear.md)
 - [InlineResponse20015DataReportedKeyFiguresThirdFiscalYear](docs/InlineResponse20015DataReportedKeyFiguresThirdFiscalYear.md)
 - [InlineResponse20015DataRsiWilder](docs/InlineResponse20015DataRsiWilder.md)
 - [InlineResponse20015DataRsiWilderDays14](docs/InlineResponse20015DataRsiWilderDays14.md)
 - [InlineResponse20015DataSimpleMovingAverage](docs/InlineResponse20015DataSimpleMovingAverage.md)
 - [InlineResponse20015DataSimpleMovingAverageDays20](docs/InlineResponse20015DataSimpleMovingAverageDays20.md)
 - [InlineResponse20015DataSimpleMovingAverageDays200](docs/InlineResponse20015DataSimpleMovingAverageDays200.md)
 - [InlineResponse20015DataSimpleMovingAverageDays50](docs/InlineResponse20015DataSimpleMovingAverageDays50.md)
 - [InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossover](docs/InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossover.md)
 - [InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50](docs/InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50.md)
 - [InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50Down](docs/InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50Down.md)
 - [InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50Up](docs/InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50Up.md)
 - [InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50UpNumberDays](docs/InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50UpNumberDays.md)
 - [InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200](docs/InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200.md)
 - [InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200Down](docs/InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200Down.md)
 - [InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200Up](docs/InlineResponse20015DataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200Up.md)
 - [InlineResponse20015DataStockType](docs/InlineResponse20015DataStockType.md)
 - [InlineResponse20015DataTradingValue](docs/InlineResponse20015DataTradingValue.md)
 - [InlineResponse20015DataTradingValueAverage](docs/InlineResponse20015DataTradingValueAverage.md)
 - [InlineResponse20015DataTradingValueAverageDays30](docs/InlineResponse20015DataTradingValueAverageDays30.md)
 - [InlineResponse20015DataTradingValueAverageDays5](docs/InlineResponse20015DataTradingValueAverageDays5.md)
 - [InlineResponse20015DataValueUnit](docs/InlineResponse20015DataValueUnit.md)
 - [InlineResponse20015DataVolatility](docs/InlineResponse20015DataVolatility.md)
 - [InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [InlineResponse2001DataBalanceSheet](docs/InlineResponse2001DataBalanceSheet.md)
 - [InlineResponse2001DataBalanceSheetCashAndDueFromBanks](docs/InlineResponse2001DataBalanceSheetCashAndDueFromBanks.md)
 - [InlineResponse2001DataBalanceSheetCashAndShortTermInvestments](docs/InlineResponse2001DataBalanceSheetCashAndShortTermInvestments.md)
 - [InlineResponse2001DataBalanceSheetNetDebt](docs/InlineResponse2001DataBalanceSheetNetDebt.md)
 - [InlineResponse2001DataBalanceSheetTotalAssets](docs/InlineResponse2001DataBalanceSheetTotalAssets.md)
 - [InlineResponse2001DataBalanceSheetTotalCash](docs/InlineResponse2001DataBalanceSheetTotalCash.md)
 - [InlineResponse2001DataBalanceSheetTotalDebt](docs/InlineResponse2001DataBalanceSheetTotalDebt.md)
 - [InlineResponse2001DataBalanceSheetTotalDeposits](docs/InlineResponse2001DataBalanceSheetTotalDeposits.md)
 - [InlineResponse2001DataBalanceSheetTotalLiabilities](docs/InlineResponse2001DataBalanceSheetTotalLiabilities.md)
 - [InlineResponse2001DataBalanceSheetTotalLoans](docs/InlineResponse2001DataBalanceSheetTotalLoans.md)
 - [InlineResponse2001DataBalanceSheetTotalShareholdersEquity](docs/InlineResponse2001DataBalanceSheetTotalShareholdersEquity.md)
 - [InlineResponse2001DataCashFlow](docs/InlineResponse2001DataCashFlow.md)
 - [InlineResponse2001DataCashFlowCapitalExpenditures](docs/InlineResponse2001DataCashFlowCapitalExpenditures.md)
 - [InlineResponse2001DataCashFlowNetFinancingCashFlow](docs/InlineResponse2001DataCashFlowNetFinancingCashFlow.md)
 - [InlineResponse2001DataCashFlowNetInvestingCashFlow](docs/InlineResponse2001DataCashFlowNetInvestingCashFlow.md)
 - [InlineResponse2001DataCashFlowNetOperating](docs/InlineResponse2001DataCashFlowNetOperating.md)
 - [InlineResponse2001DataCompany](docs/InlineResponse2001DataCompany.md)
 - [InlineResponse2001DataCurrency](docs/InlineResponse2001DataCurrency.md)
 - [InlineResponse2001DataFiscalYear](docs/InlineResponse2001DataFiscalYear.md)
 - [InlineResponse2001DataFiscalYearData](docs/InlineResponse2001DataFiscalYearData.md)
 - [InlineResponse2001DataIncomeStatement](docs/InlineResponse2001DataIncomeStatement.md)
 - [InlineResponse2001DataIncomeStatementClaimLossExpense](docs/InlineResponse2001DataIncomeStatementClaimLossExpense.md)
 - [InlineResponse2001DataIncomeStatementEbit](docs/InlineResponse2001DataIncomeStatementEbit.md)
 - [InlineResponse2001DataIncomeStatementEbitda](docs/InlineResponse2001DataIncomeStatementEbitda.md)
 - [InlineResponse2001DataIncomeStatementGrossIncome](docs/InlineResponse2001DataIncomeStatementGrossIncome.md)
 - [InlineResponse2001DataIncomeStatementInterestExpense](docs/InlineResponse2001DataIncomeStatementInterestExpense.md)
 - [InlineResponse2001DataIncomeStatementInterestIncome](docs/InlineResponse2001DataIncomeStatementInterestIncome.md)
 - [InlineResponse2001DataIncomeStatementLoanLossProvision](docs/InlineResponse2001DataIncomeStatementLoanLossProvision.md)
 - [InlineResponse2001DataIncomeStatementLongTermInsuranceReserves](docs/InlineResponse2001DataIncomeStatementLongTermInsuranceReserves.md)
 - [InlineResponse2001DataIncomeStatementNetIncome](docs/InlineResponse2001DataIncomeStatementNetIncome.md)
 - [InlineResponse2001DataIncomeStatementNetInterestIncome](docs/InlineResponse2001DataIncomeStatementNetInterestIncome.md)
 - [InlineResponse2001DataIncomeStatementNetInterestIncomeAfterLoanLossProvision](docs/InlineResponse2001DataIncomeStatementNetInterestIncomeAfterLoanLossProvision.md)
 - [InlineResponse2001DataIncomeStatementOperatingExpense](docs/InlineResponse2001DataIncomeStatementOperatingExpense.md)
 - [InlineResponse2001DataIncomeStatementOperatingIncome](docs/InlineResponse2001DataIncomeStatementOperatingIncome.md)
 - [InlineResponse2001DataIncomeStatementOperatingIncomeAfterInterestExpense](docs/InlineResponse2001DataIncomeStatementOperatingIncomeAfterInterestExpense.md)
 - [InlineResponse2001DataIncomeStatementSales](docs/InlineResponse2001DataIncomeStatementSales.md)
 - [InlineResponse2001DataNsin](docs/InlineResponse2001DataNsin.md)
 - [InlineResponse2001DataPerShare](docs/InlineResponse2001DataPerShare.md)
 - [InlineResponse2001DataPerShareBookValue](docs/InlineResponse2001DataPerShareBookValue.md)
 - [InlineResponse2001DataPerShareCashFlow](docs/InlineResponse2001DataPerShareCashFlow.md)
 - [InlineResponse2001DataPerShareDilutedEarnings](docs/InlineResponse2001DataPerShareDilutedEarnings.md)
 - [InlineResponse2001DataPerShareDividends](docs/InlineResponse2001DataPerShareDividends.md)
 - [InlineResponse2001DataPerShareEarnings](docs/InlineResponse2001DataPerShareEarnings.md)
 - [InlineResponse2001DataPerShareFreeCashFlow](docs/InlineResponse2001DataPerShareFreeCashFlow.md)
 - [InlineResponse2001DataPerShareRecurringDilutedEarnings](docs/InlineResponse2001DataPerShareRecurringDilutedEarnings.md)
 - [InlineResponse2001DataPerShareSales](docs/InlineResponse2001DataPerShareSales.md)
 - [InlineResponse2001DataPerShareTangibleBookValue](docs/InlineResponse2001DataPerShareTangibleBookValue.md)
 - [InlineResponse2001DataRatios](docs/InlineResponse2001DataRatios.md)
 - [InlineResponse2001DataSharesOutstanding](docs/InlineResponse2001DataSharesOutstanding.md)
 - [InlineResponse2001DataSharesOutstandingAverage](docs/InlineResponse2001DataSharesOutstandingAverage.md)
 - [InlineResponse2001DataType](docs/InlineResponse2001DataType.md)
 - [InlineResponse2002](docs/InlineResponse2002.md)
 - [InlineResponse2002BalanceSheet](docs/InlineResponse2002BalanceSheet.md)
 - [InlineResponse2002BalanceSheetNetDebt](docs/InlineResponse2002BalanceSheetNetDebt.md)
 - [InlineResponse2002BalanceSheetReturnOnAssets](docs/InlineResponse2002BalanceSheetReturnOnAssets.md)
 - [InlineResponse2002BalanceSheetReturnOnEquity](docs/InlineResponse2002BalanceSheetReturnOnEquity.md)
 - [InlineResponse2002Currency](docs/InlineResponse2002Currency.md)
 - [InlineResponse2002Data](docs/InlineResponse2002Data.md)
 - [InlineResponse2002FiscalYear](docs/InlineResponse2002FiscalYear.md)
 - [InlineResponse2002IncomeStatement](docs/InlineResponse2002IncomeStatement.md)
 - [InlineResponse2002IncomeStatementEbit](docs/InlineResponse2002IncomeStatementEbit.md)
 - [InlineResponse2002IncomeStatementEbitda](docs/InlineResponse2002IncomeStatementEbitda.md)
 - [InlineResponse2002IncomeStatementSales](docs/InlineResponse2002IncomeStatementSales.md)
 - [InlineResponse2002PerShare](docs/InlineResponse2002PerShare.md)
 - [InlineResponse2002PerShareCashFlow](docs/InlineResponse2002PerShareCashFlow.md)
 - [InlineResponse2002PerShareDividends](docs/InlineResponse2002PerShareDividends.md)
 - [InlineResponse2002PerShareEarnings](docs/InlineResponse2002PerShareEarnings.md)
 - [InlineResponse2002PerShareNetAssetValue](docs/InlineResponse2002PerShareNetAssetValue.md)
 - [InlineResponse2002PerShareSales](docs/InlineResponse2002PerShareSales.md)
 - [InlineResponse2002Ratios](docs/InlineResponse2002Ratios.md)
 - [InlineResponse2002RatiosDividendYield](docs/InlineResponse2002RatiosDividendYield.md)
 - [InlineResponse2002RatiosEnterpriseValueEbit](docs/InlineResponse2002RatiosEnterpriseValueEbit.md)
 - [InlineResponse2002RatiosEnterpriseValueEbita](docs/InlineResponse2002RatiosEnterpriseValueEbita.md)
 - [InlineResponse2002RatiosEnterpriseValueEbitda](docs/InlineResponse2002RatiosEnterpriseValueEbitda.md)
 - [InlineResponse2002RatiosEnterpriseValueFreeCashFlow](docs/InlineResponse2002RatiosEnterpriseValueFreeCashFlow.md)
 - [InlineResponse2002RatiosEnterpriseValueSales](docs/InlineResponse2002RatiosEnterpriseValueSales.md)
 - [InlineResponse2002RatiosPriceBookValue](docs/InlineResponse2002RatiosPriceBookValue.md)
 - [InlineResponse2002RatiosPriceCashFlow](docs/InlineResponse2002RatiosPriceCashFlow.md)
 - [InlineResponse2002RatiosPriceEarnings](docs/InlineResponse2002RatiosPriceEarnings.md)
 - [InlineResponse2002RatiosPriceEarningsGrowth](docs/InlineResponse2002RatiosPriceEarningsGrowth.md)
 - [InlineResponse2002RatiosPriceFreeCashFlow](docs/InlineResponse2002RatiosPriceFreeCashFlow.md)
 - [InlineResponse2002RatiosPriceSales](docs/InlineResponse2002RatiosPriceSales.md)
 - [InlineResponse2003](docs/InlineResponse2003.md)
 - [InlineResponse2003Data](docs/InlineResponse2003Data.md)
 - [InlineResponse2003DataRecommendation](docs/InlineResponse2003DataRecommendation.md)
 - [InlineResponse2003DataRecommendationCounts](docs/InlineResponse2003DataRecommendationCounts.md)
 - [InlineResponse2003DataTargetPrice](docs/InlineResponse2003DataTargetPrice.md)
 - [InlineResponse2003DataTargetPriceCurrency](docs/InlineResponse2003DataTargetPriceCurrency.md)
 - [InlineResponse2004](docs/InlineResponse2004.md)
 - [InlineResponse2004Data](docs/InlineResponse2004Data.md)
 - [InlineResponse2004DataAggregatedRecommendations](docs/InlineResponse2004DataAggregatedRecommendations.md)
 - [InlineResponse2004DataRecommendation](docs/InlineResponse2004DataRecommendation.md)
 - [InlineResponse2005](docs/InlineResponse2005.md)
 - [InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [InlineResponse2005Function](docs/InlineResponse2005Function.md)
 - [InlineResponse2005Officers](docs/InlineResponse2005Officers.md)
 - [InlineResponse2005Type](docs/InlineResponse2005Type.md)
 - [InlineResponse2006](docs/InlineResponse2006.md)
 - [InlineResponse2006Data](docs/InlineResponse2006Data.md)
 - [InlineResponse2006Functions](docs/InlineResponse2006Functions.md)
 - [InlineResponse2007](docs/InlineResponse2007.md)
 - [InlineResponse2007Data](docs/InlineResponse2007Data.md)
 - [InlineResponse2008](docs/InlineResponse2008.md)
 - [InlineResponse2008Data](docs/InlineResponse2008Data.md)
 - [InlineResponse2008DataOwners](docs/InlineResponse2008DataOwners.md)
 - [InlineResponse2008DataOwnership](docs/InlineResponse2008DataOwnership.md)
 - [InlineResponse2008DataType](docs/InlineResponse2008DataType.md)
 - [InlineResponse2009](docs/InlineResponse2009.md)
 - [InlineResponse2009Data](docs/InlineResponse2009Data.md)
 - [InlineResponse200Data](docs/InlineResponse200Data.md)
 - [InlineResponse200DataCompany](docs/InlineResponse200DataCompany.md)
 - [InlineResponse200DataCompanyCountry](docs/InlineResponse200DataCompanyCountry.md)
 - [InlineResponse200DataCompanyKeyFigures](docs/InlineResponse200DataCompanyKeyFigures.md)
 - [InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFigures](docs/InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFigures.md)
 - [InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresMarketCapitalizationSharesOutstanding](docs/InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresMarketCapitalizationSharesOutstanding.md)
 - [InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShare](docs/InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShare.md)
 - [InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShareBookValue](docs/InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShareBookValue.md)
 - [InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShareCashFlow](docs/InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShareCashFlow.md)
 - [InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShareEarnings](docs/InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShareEarnings.md)
 - [InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShareSales](docs/InlineResponse200DataCompanyKeyFiguresCurrencyDependentKeyFiguresPerShareSales.md)
 - [InlineResponse200DataCompanyKeyFiguresFreeFloat](docs/InlineResponse200DataCompanyKeyFiguresFreeFloat.md)
 - [InlineResponse200DataCompanyKeyFiguresSharesOutstanding](docs/InlineResponse200DataCompanyKeyFiguresSharesOutstanding.md)
 - [InlineResponse200DataFsym](docs/InlineResponse200DataFsym.md)
 - [InlineResponse200DataFsymSecurity](docs/InlineResponse200DataFsymSecurity.md)
 - [InlineResponse200DataNsin](docs/InlineResponse200DataNsin.md)
 - [InlineResponse200DataShareInstrumentKeyFigures](docs/InlineResponse200DataShareInstrumentKeyFigures.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresCurrencyDependentKeyFigures](docs/InlineResponse200DataShareInstrumentKeyFiguresCurrencyDependentKeyFigures.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresCurrencyDependentKeyFiguresPerShare](docs/InlineResponse200DataShareInstrumentKeyFiguresCurrencyDependentKeyFiguresPerShare.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresCurrencyDependentKeyFiguresPerShareDividend](docs/InlineResponse200DataShareInstrumentKeyFiguresCurrencyDependentKeyFiguresPerShareDividend.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresRatios](docs/InlineResponse200DataShareInstrumentKeyFiguresRatios.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresRatiosDividendYield](docs/InlineResponse200DataShareInstrumentKeyFiguresRatiosDividendYield.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresRatiosEarningsYield](docs/InlineResponse200DataShareInstrumentKeyFiguresRatiosEarningsYield.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresRatiosPriceBookValue](docs/InlineResponse200DataShareInstrumentKeyFiguresRatiosPriceBookValue.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresRatiosPriceCashFlow](docs/InlineResponse200DataShareInstrumentKeyFiguresRatiosPriceCashFlow.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresRatiosPriceEarnings](docs/InlineResponse200DataShareInstrumentKeyFiguresRatiosPriceEarnings.md)
 - [InlineResponse200DataShareInstrumentKeyFiguresRatiosPriceSales](docs/InlineResponse200DataShareInstrumentKeyFiguresRatiosPriceSales.md)
 - [InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [PartialOutputObject](docs/PartialOutputObject.md)
 - [PostCompanyEstimatesListByInstrumentRequest](docs/PostCompanyEstimatesListByInstrumentRequest.md)
 - [PostCompanyEstimatesListByInstrumentRequestData](docs/PostCompanyEstimatesListByInstrumentRequestData.md)
 - [PostCompanyEstimatesListByInstrumentRequestDataCurrency](docs/PostCompanyEstimatesListByInstrumentRequestDataCurrency.md)
 - [PostCompanyEstimatesListByInstrumentRequestDataFiscalYears](docs/PostCompanyEstimatesListByInstrumentRequestDataFiscalYears.md)
 - [PostCompanyEstimatesListByInstrumentRequestMeta](docs/PostCompanyEstimatesListByInstrumentRequestMeta.md)
 - [PostCompanyKeyItemsCurrentGetByInstrumentRequest](docs/PostCompanyKeyItemsCurrentGetByInstrumentRequest.md)
 - [PostCompanyKeyItemsCurrentGetByInstrumentRequestData](docs/PostCompanyKeyItemsCurrentGetByInstrumentRequestData.md)
 - [PostCompanyKeyItemsCurrentGetByInstrumentRequestDataCurrency](docs/PostCompanyKeyItemsCurrentGetByInstrumentRequestDataCurrency.md)
 - [PostCompanyKeyItemsCurrentGetByInstrumentRequestMeta](docs/PostCompanyKeyItemsCurrentGetByInstrumentRequestMeta.md)
 - [PostCompanyKeyItemsFiscalYearListByInstrumentRequest](docs/PostCompanyKeyItemsFiscalYearListByInstrumentRequest.md)
 - [PostCompanyKeyItemsFiscalYearListByInstrumentRequestData](docs/PostCompanyKeyItemsFiscalYearListByInstrumentRequestData.md)
 - [PostCompanyKeyItemsFiscalYearListByInstrumentRequestDataCurrency](docs/PostCompanyKeyItemsFiscalYearListByInstrumentRequestDataCurrency.md)
 - [PostCompanyKeyItemsFiscalYearListByInstrumentRequestDataFiscalYears](docs/PostCompanyKeyItemsFiscalYearListByInstrumentRequestDataFiscalYears.md)
 - [PostStockDividendListRequest](docs/PostStockDividendListRequest.md)
 - [PostStockDividendListRequestData](docs/PostStockDividendListRequestData.md)
 - [PostStockDividendListRequestDataFilter](docs/PostStockDividendListRequestDataFilter.md)
 - [PostStockDividendListRequestDataFilterPeriod](docs/PostStockDividendListRequestDataFilterPeriod.md)
 - [PostStockDividendListRequestDataFilterType](docs/PostStockDividendListRequestDataFilterType.md)
 - [PostStockDividendListRequestDataIdentifier](docs/PostStockDividendListRequestDataIdentifier.md)
 - [PostStockDividendListRequestMeta](docs/PostStockDividendListRequestMeta.md)
 - [PostStockNotationRankingIntradayListRequest](docs/PostStockNotationRankingIntradayListRequest.md)
 - [PostStockNotationRankingIntradayListRequestData](docs/PostStockNotationRankingIntradayListRequestData.md)
 - [PostStockNotationRankingIntradayListRequestDataCompany](docs/PostStockNotationRankingIntradayListRequestDataCompany.md)
 - [PostStockNotationRankingIntradayListRequestDataCompanyCountry](docs/PostStockNotationRankingIntradayListRequestDataCompanyCountry.md)
 - [PostStockNotationRankingIntradayListRequestDataCurrency](docs/PostStockNotationRankingIntradayListRequestDataCurrency.md)
 - [PostStockNotationRankingIntradayListRequestDataIndexMembership](docs/PostStockNotationRankingIntradayListRequestDataIndexMembership.md)
 - [PostStockNotationRankingIntradayListRequestDataIndustryClassification](docs/PostStockNotationRankingIntradayListRequestDataIndustryClassification.md)
 - [PostStockNotationRankingIntradayListRequestDataInstrumentRestrictionList](docs/PostStockNotationRankingIntradayListRequestDataInstrumentRestrictionList.md)
 - [PostStockNotationRankingIntradayListRequestDataMarket](docs/PostStockNotationRankingIntradayListRequestDataMarket.md)
 - [PostStockNotationRankingIntradayListRequestDataMarketPriority](docs/PostStockNotationRankingIntradayListRequestDataMarketPriority.md)
 - [PostStockNotationRankingIntradayListRequestDataNotationRestrictionList](docs/PostStockNotationRankingIntradayListRequestDataNotationRestrictionList.md)
 - [PostStockNotationRankingIntradayListRequestDataPerformance](docs/PostStockNotationRankingIntradayListRequestDataPerformance.md)
 - [PostStockNotationRankingIntradayListRequestDataPerformanceRelative](docs/PostStockNotationRankingIntradayListRequestDataPerformanceRelative.md)
 - [PostStockNotationRankingIntradayListRequestDataPerformanceRelativeMaximum](docs/PostStockNotationRankingIntradayListRequestDataPerformanceRelativeMaximum.md)
 - [PostStockNotationRankingIntradayListRequestDataPerformanceRelativeMinimum](docs/PostStockNotationRankingIntradayListRequestDataPerformanceRelativeMinimum.md)
 - [PostStockNotationRankingIntradayListRequestDataPrices](docs/PostStockNotationRankingIntradayListRequestDataPrices.md)
 - [PostStockNotationRankingIntradayListRequestMeta](docs/PostStockNotationRankingIntradayListRequestMeta.md)
 - [PostStockNotationRankingIntradayListRequestMetaPagination](docs/PostStockNotationRankingIntradayListRequestMetaPagination.md)
 - [PostStockNotationScreenerSearchRequest](docs/PostStockNotationScreenerSearchRequest.md)
 - [PostStockNotationScreenerSearchRequestData](docs/PostStockNotationScreenerSearchRequestData.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmark](docs/PostStockNotationScreenerSearchRequestDataBenchmark.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkBeta](docs/PostStockNotationScreenerSearchRequestDataBenchmarkBeta.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkBetaMonth1](docs/PostStockNotationScreenerSearchRequestDataBenchmarkBetaMonth1.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkBetaMonths3](docs/PostStockNotationScreenerSearchRequestDataBenchmarkBetaMonths3.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkBetaMonths6](docs/PostStockNotationScreenerSearchRequestDataBenchmarkBetaMonths6.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkBetaWeek1](docs/PostStockNotationScreenerSearchRequestDataBenchmarkBetaWeek1.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkBetaYear1](docs/PostStockNotationScreenerSearchRequestDataBenchmarkBetaYear1.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkBetaYears3](docs/PostStockNotationScreenerSearchRequestDataBenchmarkBetaYears3.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkBetaYears5](docs/PostStockNotationScreenerSearchRequestDataBenchmarkBetaYears5.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkCorrelation](docs/PostStockNotationScreenerSearchRequestDataBenchmarkCorrelation.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkOutperformance](docs/PostStockNotationScreenerSearchRequestDataBenchmarkOutperformance.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceMonth1](docs/PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceMonth1.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceMonths3](docs/PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceMonths3.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceMonths6](docs/PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceMonths6.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceWeek1](docs/PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceWeek1.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceYear1](docs/PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceYear1.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceYears3](docs/PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceYears3.md)
 - [PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceYears5](docs/PostStockNotationScreenerSearchRequestDataBenchmarkOutperformanceYears5.md)
 - [PostStockNotationScreenerSearchRequestDataCompany](docs/PostStockNotationScreenerSearchRequestDataCompany.md)
 - [PostStockNotationScreenerSearchRequestDataCompanyCountry](docs/PostStockNotationScreenerSearchRequestDataCompanyCountry.md)
 - [PostStockNotationScreenerSearchRequestDataCompanyCountryExclude](docs/PostStockNotationScreenerSearchRequestDataCompanyCountryExclude.md)
 - [PostStockNotationScreenerSearchRequestDataCompanyCountryRestrict](docs/PostStockNotationScreenerSearchRequestDataCompanyCountryRestrict.md)
 - [PostStockNotationScreenerSearchRequestDataCompliance](docs/PostStockNotationScreenerSearchRequestDataCompliance.md)
 - [PostStockNotationScreenerSearchRequestDataComplianceFrance](docs/PostStockNotationScreenerSearchRequestDataComplianceFrance.md)
 - [PostStockNotationScreenerSearchRequestDataComplianceFranceAnd](docs/PostStockNotationScreenerSearchRequestDataComplianceFranceAnd.md)
 - [PostStockNotationScreenerSearchRequestDataComplianceFranceOr](docs/PostStockNotationScreenerSearchRequestDataComplianceFranceOr.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimates](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimates.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesCurrency](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesCurrency.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesEbit](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesEbit.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesEbitMean](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesEbitMean.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesEbitda](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesEbitda.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShare](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShare.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShareCashFlow](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShareCashFlow.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShareDividends](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShareDividends.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShareEarnings](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShareEarnings.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShareSales](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentEstimatesPerShareSales.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFigures](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFigures.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresCurrency](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresCurrency.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresEbit](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresEbit.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresEbitda](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresEbitda.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresMarketCapitalization](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresMarketCapitalization.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShare](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShare.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareBookValue](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareBookValue.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareCashFlow](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareCashFlow.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareDividends](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareDividends.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareRecurringDilutedEarnings](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareRecurringDilutedEarnings.md)
 - [PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareSales](docs/PostStockNotationScreenerSearchRequestDataCurrencyDependentKeyFiguresPerShareSales.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFigures](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFigures.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompany](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompany.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependent](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependent.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentCurrency](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentCurrency.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentMarketCapitalizationSharesOutstanding](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentMarketCapitalizationSharesOutstanding.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShare](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShare.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShareBookValue](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShareBookValue.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShareCashFlow](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShareCashFlow.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShareEarnings](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShareEarnings.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShareSales](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyCurrencyDependentPerShareSales.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyFreeFloat](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanyFreeFloat.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanySharesOutstanding](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanySharesOutstanding.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanySharesOutstandingMaximum](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanySharesOutstandingMaximum.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanySharesOutstandingMinimum](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresCompanySharesOutstandingMinimum.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrument](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrument.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentCurrencyDependent](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentCurrencyDependent.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentCurrencyDependentPerShare](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentCurrencyDependentPerShare.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentCurrencyDependentPerShareDividend](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentCurrencyDependentPerShareDividend.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatios](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatios.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosDividendYield](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosDividendYield.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosEarningsYield](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosEarningsYield.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosPriceBookValue](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosPriceBookValue.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosPriceCashFlow](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosPriceCashFlow.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosPriceEarnings](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosPriceEarnings.md)
 - [PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosPriceSales](docs/PostStockNotationScreenerSearchRequestDataCurrentKeyFiguresShareInstrumentRatiosPriceSales.md)
 - [PostStockNotationScreenerSearchRequestDataEbitMargin](docs/PostStockNotationScreenerSearchRequestDataEbitMargin.md)
 - [PostStockNotationScreenerSearchRequestDataEbitMarginMaximum](docs/PostStockNotationScreenerSearchRequestDataEbitMarginMaximum.md)
 - [PostStockNotationScreenerSearchRequestDataEbitMarginMinimum](docs/PostStockNotationScreenerSearchRequestDataEbitMarginMinimum.md)
 - [PostStockNotationScreenerSearchRequestDataEbitdaMargin](docs/PostStockNotationScreenerSearchRequestDataEbitdaMargin.md)
 - [PostStockNotationScreenerSearchRequestDataEsg](docs/PostStockNotationScreenerSearchRequestDataEsg.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabs](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabs.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasb](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasb.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategories](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategories.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesInsight](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesInsight.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesInsightMaximum](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesInsightMaximum.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesInsightMinimum](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesInsightMinimum.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesMomentum](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesMomentum.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesRanking](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbAllCategoriesRanking.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbMateriality](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSasbMateriality.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSdg](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSdg.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSdgImpact](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSdgImpact.md)
 - [PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSdgImpactMomentum](docs/PostStockNotationScreenerSearchRequestDataEsgTruvalueLabsSdgImpactMomentum.md)
 - [PostStockNotationScreenerSearchRequestDataEstimates](docs/PostStockNotationScreenerSearchRequestDataEstimates.md)
 - [PostStockNotationScreenerSearchRequestDataFiscalYear](docs/PostStockNotationScreenerSearchRequestDataFiscalYear.md)
 - [PostStockNotationScreenerSearchRequestDataFiscalYear1](docs/PostStockNotationScreenerSearchRequestDataFiscalYear1.md)
 - [PostStockNotationScreenerSearchRequestDataGrossIncomeMargin](docs/PostStockNotationScreenerSearchRequestDataGrossIncomeMargin.md)
 - [PostStockNotationScreenerSearchRequestDataIndexMembership](docs/PostStockNotationScreenerSearchRequestDataIndexMembership.md)
 - [PostStockNotationScreenerSearchRequestDataIndustryClassification](docs/PostStockNotationScreenerSearchRequestDataIndustryClassification.md)
 - [PostStockNotationScreenerSearchRequestDataIndustryClassificationExclude](docs/PostStockNotationScreenerSearchRequestDataIndustryClassificationExclude.md)
 - [PostStockNotationScreenerSearchRequestDataIndustryClassificationRestrict](docs/PostStockNotationScreenerSearchRequestDataIndustryClassificationRestrict.md)
 - [PostStockNotationScreenerSearchRequestDataNetIncomeMargin](docs/PostStockNotationScreenerSearchRequestDataNetIncomeMargin.md)
 - [PostStockNotationScreenerSearchRequestDataOperatingMargin](docs/PostStockNotationScreenerSearchRequestDataOperatingMargin.md)
 - [PostStockNotationScreenerSearchRequestDataPerformance](docs/PostStockNotationScreenerSearchRequestDataPerformance.md)
 - [PostStockNotationScreenerSearchRequestDataPerformanceEndOfDay](docs/PostStockNotationScreenerSearchRequestDataPerformanceEndOfDay.md)
 - [PostStockNotationScreenerSearchRequestDataPerformanceEndOfDayDay1](docs/PostStockNotationScreenerSearchRequestDataPerformanceEndOfDayDay1.md)
 - [PostStockNotationScreenerSearchRequestDataPerformanceEndOfDayYearToDate](docs/PostStockNotationScreenerSearchRequestDataPerformanceEndOfDayYearToDate.md)
 - [PostStockNotationScreenerSearchRequestDataPerformanceIntraday](docs/PostStockNotationScreenerSearchRequestDataPerformanceIntraday.md)
 - [PostStockNotationScreenerSearchRequestDataRatios](docs/PostStockNotationScreenerSearchRequestDataRatios.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1](docs/PostStockNotationScreenerSearchRequestDataRatios1.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1DividendYield](docs/PostStockNotationScreenerSearchRequestDataRatios1DividendYield.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1EnterpriseValueEbit](docs/PostStockNotationScreenerSearchRequestDataRatios1EnterpriseValueEbit.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1EnterpriseValueEbitda](docs/PostStockNotationScreenerSearchRequestDataRatios1EnterpriseValueEbitda.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1EnterpriseValueSales](docs/PostStockNotationScreenerSearchRequestDataRatios1EnterpriseValueSales.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1PriceBookValue](docs/PostStockNotationScreenerSearchRequestDataRatios1PriceBookValue.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1PriceCashFlow](docs/PostStockNotationScreenerSearchRequestDataRatios1PriceCashFlow.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1PriceEarnings](docs/PostStockNotationScreenerSearchRequestDataRatios1PriceEarnings.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1PriceEarningsGrowth](docs/PostStockNotationScreenerSearchRequestDataRatios1PriceEarningsGrowth.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1PriceEarningsGrowthMean](docs/PostStockNotationScreenerSearchRequestDataRatios1PriceEarningsGrowthMean.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1PriceFreeCashFlow](docs/PostStockNotationScreenerSearchRequestDataRatios1PriceFreeCashFlow.md)
 - [PostStockNotationScreenerSearchRequestDataRatios1PriceSales](docs/PostStockNotationScreenerSearchRequestDataRatios1PriceSales.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosDebtEquity](docs/PostStockNotationScreenerSearchRequestDataRatiosDebtEquity.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosDividendYield](docs/PostStockNotationScreenerSearchRequestDataRatiosDividendYield.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosEnterpriseValueEbit](docs/PostStockNotationScreenerSearchRequestDataRatiosEnterpriseValueEbit.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosEnterpriseValueEbitda](docs/PostStockNotationScreenerSearchRequestDataRatiosEnterpriseValueEbitda.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosEnterpriseValueSales](docs/PostStockNotationScreenerSearchRequestDataRatiosEnterpriseValueSales.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosPriceBookValue](docs/PostStockNotationScreenerSearchRequestDataRatiosPriceBookValue.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosPriceCashFlow](docs/PostStockNotationScreenerSearchRequestDataRatiosPriceCashFlow.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosPriceEarnings](docs/PostStockNotationScreenerSearchRequestDataRatiosPriceEarnings.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosPriceFreeCashFlow](docs/PostStockNotationScreenerSearchRequestDataRatiosPriceFreeCashFlow.md)
 - [PostStockNotationScreenerSearchRequestDataRatiosPriceSales](docs/PostStockNotationScreenerSearchRequestDataRatiosPriceSales.md)
 - [PostStockNotationScreenerSearchRequestDataRecommendation](docs/PostStockNotationScreenerSearchRequestDataRecommendation.md)
 - [PostStockNotationScreenerSearchRequestDataRecommendationConsensus](docs/PostStockNotationScreenerSearchRequestDataRecommendationConsensus.md)
 - [PostStockNotationScreenerSearchRequestDataRecommendationConsensusChange](docs/PostStockNotationScreenerSearchRequestDataRecommendationConsensusChange.md)
 - [PostStockNotationScreenerSearchRequestDataRecommendationConsensusRange](docs/PostStockNotationScreenerSearchRequestDataRecommendationConsensusRange.md)
 - [PostStockNotationScreenerSearchRequestDataRecommendationCounts](docs/PostStockNotationScreenerSearchRequestDataRecommendationCounts.md)
 - [PostStockNotationScreenerSearchRequestDataRecommendationCountsTotal](docs/PostStockNotationScreenerSearchRequestDataRecommendationCountsTotal.md)
 - [PostStockNotationScreenerSearchRequestDataRecommendationCountsTotalMaximum](docs/PostStockNotationScreenerSearchRequestDataRecommendationCountsTotalMaximum.md)
 - [PostStockNotationScreenerSearchRequestDataRecommendationCountsTotalMinimum](docs/PostStockNotationScreenerSearchRequestDataRecommendationCountsTotalMinimum.md)
 - [PostStockNotationScreenerSearchRequestDataReportedKeyFigures](docs/PostStockNotationScreenerSearchRequestDataReportedKeyFigures.md)
 - [PostStockNotationScreenerSearchRequestDataReturnOnAssets](docs/PostStockNotationScreenerSearchRequestDataReturnOnAssets.md)
 - [PostStockNotationScreenerSearchRequestDataReturnOnAssets1](docs/PostStockNotationScreenerSearchRequestDataReturnOnAssets1.md)
 - [PostStockNotationScreenerSearchRequestDataReturnOnAssets1Mean](docs/PostStockNotationScreenerSearchRequestDataReturnOnAssets1Mean.md)
 - [PostStockNotationScreenerSearchRequestDataReturnOnEquity](docs/PostStockNotationScreenerSearchRequestDataReturnOnEquity.md)
 - [PostStockNotationScreenerSearchRequestDataReturnOnEquity1](docs/PostStockNotationScreenerSearchRequestDataReturnOnEquity1.md)
 - [PostStockNotationScreenerSearchRequestDataRsiWilder](docs/PostStockNotationScreenerSearchRequestDataRsiWilder.md)
 - [PostStockNotationScreenerSearchRequestDataRsiWilderDays14](docs/PostStockNotationScreenerSearchRequestDataRsiWilderDays14.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverage](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverage.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageDays20](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageDays20.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageDays200](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageDays200.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageDays50](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageDays50.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossover](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossover.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDays](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDays.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDaysMaximum](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDaysMaximum.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDaysMinimum](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma20vs50NumberDaysMinimum.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDays](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDays.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDaysMaximum](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDaysMaximum.md)
 - [PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDaysMinimum](docs/PostStockNotationScreenerSearchRequestDataSimpleMovingAverageTradingDaysSinceCrossoverSma50vs200NumberDaysMinimum.md)
 - [PostStockNotationScreenerSearchRequestDataTradingValue](docs/PostStockNotationScreenerSearchRequestDataTradingValue.md)
 - [PostStockNotationScreenerSearchRequestDataTradingValueAverage](docs/PostStockNotationScreenerSearchRequestDataTradingValueAverage.md)
 - [PostStockNotationScreenerSearchRequestDataTradingValueAverageDays30](docs/PostStockNotationScreenerSearchRequestDataTradingValueAverageDays30.md)
 - [PostStockNotationScreenerSearchRequestDataTradingValueAverageDays5](docs/PostStockNotationScreenerSearchRequestDataTradingValueAverageDays5.md)
 - [PostStockNotationScreenerSearchRequestDataValidation](docs/PostStockNotationScreenerSearchRequestDataValidation.md)
 - [PostStockNotationScreenerSearchRequestDataValidationInstrumentSelectionList](docs/PostStockNotationScreenerSearchRequestDataValidationInstrumentSelectionList.md)
 - [PostStockNotationScreenerSearchRequestDataValidationInstrumentSelectionListExclude](docs/PostStockNotationScreenerSearchRequestDataValidationInstrumentSelectionListExclude.md)
 - [PostStockNotationScreenerSearchRequestDataValidationInstrumentSelectionListRestrict](docs/PostStockNotationScreenerSearchRequestDataValidationInstrumentSelectionListRestrict.md)
 - [PostStockNotationScreenerSearchRequestDataValidationMarket](docs/PostStockNotationScreenerSearchRequestDataValidationMarket.md)
 - [PostStockNotationScreenerSearchRequestDataValidationMarketPriority](docs/PostStockNotationScreenerSearchRequestDataValidationMarketPriority.md)
 - [PostStockNotationScreenerSearchRequestDataValidationMarketSelection](docs/PostStockNotationScreenerSearchRequestDataValidationMarketSelection.md)
 - [PostStockNotationScreenerSearchRequestDataValidationMarketSelectionExclude](docs/PostStockNotationScreenerSearchRequestDataValidationMarketSelectionExclude.md)
 - [PostStockNotationScreenerSearchRequestDataValidationMarketSelectionRestrict](docs/PostStockNotationScreenerSearchRequestDataValidationMarketSelectionRestrict.md)
 - [PostStockNotationScreenerSearchRequestDataValidationNotationSelectionList](docs/PostStockNotationScreenerSearchRequestDataValidationNotationSelectionList.md)
 - [PostStockNotationScreenerSearchRequestDataValidationNotationSelectionListExclude](docs/PostStockNotationScreenerSearchRequestDataValidationNotationSelectionListExclude.md)
 - [PostStockNotationScreenerSearchRequestDataValidationNotationSelectionListRestrict](docs/PostStockNotationScreenerSearchRequestDataValidationNotationSelectionListRestrict.md)
 - [PostStockNotationScreenerSearchRequestDataValidationPrices](docs/PostStockNotationScreenerSearchRequestDataValidationPrices.md)
 - [PostStockNotationScreenerSearchRequestDataValidationPricesLatest](docs/PostStockNotationScreenerSearchRequestDataValidationPricesLatest.md)
 - [PostStockNotationScreenerSearchRequestDataValidationPricesPrevious](docs/PostStockNotationScreenerSearchRequestDataValidationPricesPrevious.md)
 - [PostStockNotationScreenerSearchRequestDataValidationValueUnit](docs/PostStockNotationScreenerSearchRequestDataValidationValueUnit.md)
 - [PostStockNotationScreenerSearchRequestDataValidationValueUnitExclude](docs/PostStockNotationScreenerSearchRequestDataValidationValueUnitExclude.md)
 - [PostStockNotationScreenerSearchRequestDataValidationValueUnitRestrict](docs/PostStockNotationScreenerSearchRequestDataValidationValueUnitRestrict.md)
 - [PostStockNotationScreenerSearchRequestDataVolatility](docs/PostStockNotationScreenerSearchRequestDataVolatility.md)
 - [PostStockNotationScreenerSearchRequestMeta](docs/PostStockNotationScreenerSearchRequestMeta.md)
 - [PostStockNotationScreenerSearchRequestMetaPagination](docs/PostStockNotationScreenerSearchRequestMetaPagination.md)
 - [PostStockNotationScreenerValueRangesGetRequest](docs/PostStockNotationScreenerValueRangesGetRequest.md)
 - [PostStockNotationScreenerValueRangesGetRequestData](docs/PostStockNotationScreenerValueRangesGetRequestData.md)
 - [PostStockNotationScreenerValueRangesGetRequestDataRecommendation](docs/PostStockNotationScreenerValueRangesGetRequestDataRecommendation.md)
 - [PostStockNotationScreenerValueRangesGetRequestDataRecommendationConsensus](docs/PostStockNotationScreenerValueRangesGetRequestDataRecommendationConsensus.md)
 - [StatusObject](docs/StatusObject.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
